--- a/Sections/00_Title_Saclay.tex
+++ b/Sections/00_Title_Saclay.tex
@@ -65,18 +65,16 @@ Propriétés catalytiques à l'échelle nanométrique sondées par diffraction d
 \arrayrulecolor{Prune}
 {\footnotesize \textbf{Composition du jury}}\\
 & \\
-% \textbf{Sylvain Ravy} & Président \\
-% Dr., Synchrotron SOLEIL & \\
 \textbf{Andreas Stierle} & Rapporteur \\
 Professor, University of Hamburg / DESY & \\
 \textbf{Thomas Cornélius} & Rapporteur \\
-Directeur de Recherche, IM2NP & \\
+Directeur de recherche, IM2NP & \\
 \textbf{Dina Carbone} & Examinatrice \\
 Researcher, Lund University & \\
-% \textbf{Alessandro Coati} & Examinateur \\
-% Maitre de conférence, Université Paris-Saclay & \\
+\textbf{Sylvain Ravy} & Examinateur \\
+Directeur de recherche, LPS & \\
 \textbf{Virginie Chamard} & Examinatrice \\
-Directrice de Recherche, Institut Fresnel & \\
+Directrice de recherche, Institut Fresnel & \\
 
 \end{tabular} 
 
