--- a/Sections/1_Introduction/AmmoniaOxidation.tex
+++ b/Sections/1_Introduction/AmmoniaOxidation.tex
@@ -31,7 +31,7 @@ Diesel engines are also used in the heavy industry impacting the surrounding are
 
 \epigraph{Today, about \qty{50}{\percent} of the world population relies on nitrogen-based fertilisers to produce the food necessary to their alimentation.}%{\textit{Nature Catalysis editorial, \cite*{NatureEditorial2018}.}}
 
-The story of ammonia begins in the early $20^{th}$ century with the discovery in 1902 of the Ostwald process that permitted the synthesis of fertilisers from the oxidation of ammonia.
+The story of ammonia begins in the early $20^{th}$ century with the discovery in 1902 of the Ostwald process that permitted the synthesis of fertilisers from the oxidation of ammonia \parencite{Ostwald1902, Ostwald1903}.
 Wilhelm Ostwald later received the Nobel price in 1909 \textit{"in recognition of his work on catalysis and for his investigations into the fundamental principles governing chemical equilibria and rates of reaction"}.
 
 Seven years after the discovery, in 1909, Fritz Haber designed a process for the synthesis of ammonia which was later improved by Carl Bosch.
@@ -121,10 +121,10 @@ In all cases, particular focus is on two products of the reaction, namely, \ce{N
 
 \subsection{Industry conditions and catalysts}
 
-When aiming at the production of nitric acid, important selectivity towards the production of \ce{NO} must be achieved during the ammonia oxidation (eq. \ref{eq:AmmoniaOxidationNitrousOxide}), \textit{i.e.} during the first stage of the Ostwald process.
-However, at low temperature or low \ce{O_2}/\ce{NH_3} ratios, the production of \ce{N_2} is favoured (eq. \ref{eq:AmmoniaOxidationNitrogen}), which is at the origin of the selective, heterogeneous catalytic oxidation of ammonia towards the production of nitrogen oxide.
+When aiming at the production of nitric acid, selectivity towards the production of \ce{NO} must be achieved during the ammonia oxidation (eq. \ref{eq:AmmoniaOxidationNitrousOxide}), \textit{i.e.} during the first stage of the Ostwald process.
+However, at low temperature or low \ce{O_2}/\ce{NH_3} ratios, the production of \ce{N_2} is favoured (eq. \ref{eq:AmmoniaOxidationNitrogen}), which is at the origin of the selective, heterogeneous catalytic oxidation of ammonia towards the production of nitrogen oxide \parencite{Hatscher2008}.
 
-Since the 1930s, the presence of rhodium (\qty{\approx 10}{\percent} Rh) in knitted Pt-Rh gauzes catalysts at favourable reaction conditions (e.g. \qty{900}{\degreeCelsius} - \qty{5}{\bar} - excess \dioxygen) allowed a \qty{98}{\percent} \ce{NO} yield to be achieved, \qty{4}{\percent} higher than for pure platinum, while also increasing the catalyst lifetime, and decreasing the material loss \parencite{Ostwald1908, Kaiser1909, Handforth1934, Heck1982}.
+Since the 1930s, the presence of rhodium (\qty{\approx 10}{\percent} Rh) in knitted Pt-Rh gauzes catalysts at favourable reaction conditions (e.g. \qty{900}{\degreeCelsius} - \qty{5}{\bar} - excess \dioxygen) allowed a \qty{98}{\percent} \ce{NO} yield to be achieved, \qty{4}{\percent} higher than for pure platinum, while also increasing the catalyst lifetime, and decreasing the material loss \parencite{Kaiser1909, Handforth1934, Heck1982}.
 
 In order to understand the reaction mechanism occurring on the catalyst surface, and the role of Pt and Rh in the catalyst stability and selectivity, scientist have been studying the reaction by different methods since the beginning of last century.
 A comprehensive review of the ammonia oxidation is given by Hatscher et al. \parencite*{Hatscher2008}.
@@ -166,7 +166,7 @@ The replacement of the material loss constitutes the second biggest expense in t
 First studies performed at low pressure and different temperatures have supported a Langmuir-Hinshelwood mechanism \parencite{Nutt1969, Pignet1974, Ostermaier1974, Pignet1975, Gland1978a}.
 Both reactants are adsorbed and decomposed on top of the catalyst surface, the final pathway towards the production of nitrogen or nitric oxide depending on the ratio between the \ce{O_2} and \ce{NH_3} partial pressures.
 
-The importance of adsorbed atomic oxygen (\ce{O_a}) and adsorbed hydroxyl groups (\ce{OH_a}) in the de-hydrogenation of ammonia on both Pt(111) \parencite{Mieher1995} and Pt(100) surface was put into evidence by e.g. molecular beam studies under various oxygen coverages \parencite{Bradley1995, Bradley1997, vandenBroek1999, Kim2000}.
+The importance of adsorbed atomic oxygen (\ce{O_a}) and adsorbed hydroxyl groups (\ce{OH_a}) in the de-hydrogenation of ammonia on both Pt(111) \parencite{Mieher1995} and Pt(100) surface was put into evidence by e.g. molecular beam studies under various oxygen coverage \parencite{Bradley1995, Bradley1997, vandenBroek1999, Kim2000}.
 High oxygen coverage on Pt(100) has shown to reduce the production of nitrogen, mainly produced by the dissociation of nitric oxide (\ce{NO}), favoured at lower temperatures over \ce{NO} desorption \parencite{Bradley1995}.
 
 Asscher et al. \parencite*{Asscher1984} have reported the existence of a mechanism involving oxygen in the gas phase reacting with adsorbed \ce{NH_x} species on Pt(111) for the production of \ce{NO}, evidence of which was not observed in recent studies.
@@ -204,8 +204,8 @@ Interestingly, the deactivation of Pt catalysts due to the adsorption of nitroge
 The first studies performed under industrially relevant conditions brought forward two recurrent problems when carrying out low pressure studies.
 (i), the production of \ce{N_2O} was rarely discussed because undetected, van den Broek et al. \parencite*{vandenBroek1999} first hypothesised that \ce{NO} was a precursor in the production of nitrous oxide, produced \textit{via} an additional reaction with adsorbed oxygen.
 \ce{N_2O} was then detected also by Pérez-Ramirez et al. \parencite*{PerezRamirez2004}, Baerns et al. \parencite*{Baerns2005} and Kondratenko et al. \parencite*{Kondratenko2007} which confirmed the precursor role of \ce{NO} in its production.
-\ce{N_2} was hypothetised to be produced from the association of two adsorbed nitrogen atoms, after the de-hydrogenation process.
-Previous works mentionning oxidation of adsorbed ammonia by gas phase atoms was contradicted.
+\ce{N_2} was hypothesised to be produced from the association of two adsorbed nitrogen atoms, after the de-hydrogenation process.
+Previous works mentioning oxidation of adsorbed ammonia by gas phase atoms was contradicted.
 (ii), the known roughening process of the catalyst at working conditions could not be reproduced without long working times, and high pressures.
 Kinetic studies on poly-crystalline Pt up to \qty{10}{\bar} but at temperatures below \qty{385}{\degreeCelsius} observed the roughening transition \parencite{Kraehnert2008}, which proved difficult to fit with develop kinetic models, attributed to local increase in temperature and surface area.
 
@@ -306,7 +306,7 @@ However, there can be a subsequent problem of unreacted ammonia \textit{slipping
 
 To efficiently remove ammonia, the selectivity of the ammonia oxidation reaction must be tuned towards the production of \ce{N_2}, which is the only non pollutant and toxic gas.
 
-Lim et al. \parencite*{Lim2021a} have underlined that if the current methodologies for producing ammonia and nitric acid remain unchanged, carbon emissions originating from the manufacturing of fixed fertilizer feedstocks could exceed 1300 MtCO2eq/yr, highlighting the pressing necessity for sustainable alternatives.
+Lim et al. \parencite*{Lim2021a} have underlined that if the current methodologies for producing ammonia and nitric acid remain unchanged, carbon emissions originating from the manufacturing of fixed fertiliser feedstocks could exceed 1300 MtCO2eq/yr, highlighting the pressing necessity for sustainable alternatives.
 
 Therefore, depending on the application of the ammonia oxidation, the catalytic reaction must be tuned towards a specific product, this \textit{selectivity} is controlled by the reaction temperature, pressure, the reactant ratio, and the type of catalyst.
 To be able to drive the reaction, the impact of each parameter \textit{at relevant industrial conditions} on the product pressure must be studied.
@@ -407,16 +407,16 @@ X-ray photoelectron spectroscopy will be carried out at the B07 beamline (Diamon
 Both the material and pressure gap will be partly bridged by operating at temperatures before and after the catalyst light-off, at almost industrial pressure.
 
 The study of the reaction will be performed \textit{operando}, by exploring the large parameter space defined by the operating temperature, total pressure, and \ce{O_2}/\ce{NH_3} ratio.
-The utilization of diverse samples will contribute to a comprehensive understanding of the underlying structural dynamics.
+The utilisation of diverse samples will contribute to a comprehensive understanding of the underlying structural dynamics.
 Integrating the evolution of the catalyst surface structure with the nature of adsorbed species during the reaction will help validate the reaction mechanism.
 
 \section{Thesis outline}
 
-The first chapter of the thesis has delved into the history of the subject and its societal impacts, setting the stage os this thesis.
+The first chapter of the thesis has delved into the history of the subject and its societal impacts, setting the stage of this thesis.
 
 The second chapter will provide a concise overview of heterogeneous catalysis and the fundamental principles governing the interaction between x-rays and matter.
-This section emphasizes the origins, advantages, and constraints of each technique used in the study, highlighting how x-rays can indirectly observe catalytic reactions by detecting unique markers left on the materials.
-The SixS beamline at synchrotron SOLEIL, the primary tool for most experiments, will be introduced, emphasizing the latest advancements in experimental techniques and beamline-specific hardware.
+This section emphasises the origins, advantages, and constraints of each technique used in the study, highlighting how x-rays can indirectly observe catalytic reactions by detecting unique markers left on the materials.
+The SixS beamline at synchrotron SOLEIL, the primary tool for most experiments, will be introduced, emphasising the latest advancements in experimental techniques and beamline-specific hardware.
 Additionally, the thesis presents the software used for data reduction and analysis developed during this work, focusing on a comprehensive workflow for Bragg coherent diffraction imaging, a technique that has yet to reach its full potential through the development of $4^{th}$-generation synchrotrons and powerful computing clusters.
 The new software's aim to facilitate the reduction and analysis of data in \textit{Python}, while encouraging broader adoption of the technique through a user-friendly graphical interface, will be described.
 
@@ -428,5 +428,5 @@ Complementary studies with x-ray photoelectron spectroscopy will be performed at
 Information about the presence or not of nitrogen and oxygen species on the catalyst surface will improve the understanding of the reaction mechanism.
 Finally, to explore the correlation between surface structure and catalytic activity, mass spectrometry data will be collected simultaneously to all measurements.
 
-The last chapter critically analyzes the correlation between the results obtained from each technique, comparing them to existing literature findings.
+The last chapter critically analyses the correlation between the results obtained from each technique, comparing them to existing literature findings.
 The chapter assesses their reliability, representativeness, and validity, offering both quantitative and qualitative insights.
