--- a/Sections/3_Results_Nanoparticles/BCDIOxidationAmmonia.tex
+++ b/Sections/3_Results_Nanoparticles/BCDIOxidationAmmonia.tex
@@ -1,10 +1,6 @@
 \subsection{Nanoparticle structure evolution during ammonia oxidation at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius}}\label{sec:BCDIAmmoniaOxidation}
 
-% could do cross correlation maps
-% could do radial distributions analysis, onion rings !
-% change fwhm evolution to percentages
-
-Having shown that the Pt particles epitaxied on alumina are not stable during the oxidation of ammonia at \qty{600}{\degreeCelsius}, the reaction was measured using BCDI at lower temperatures before and after the catalyst light off, respectively \qty{300}{\degreeCelsius}, and \qty{400}{\degreeCelsius}.
+Nanoparticle \textit{A} being not stable during the oxidation of ammonia at \qty{600}{\degreeCelsius}, the reaction was measured using BCDI at lower temperatures before and after the catalyst light off, respectively \qty{300}{\degreeCelsius}, and \qty{400}{\degreeCelsius}.
 
 The same sample, experimental setup, type of measurements and phase retrieval algorithms were used as detailed in the previous section.
 Two nanoparticles were identified on the substrate \textit{via} sample mapping, first measured at room temperature under inert argon atmosphere.
@@ -32,9 +28,9 @@ Those facets could not be detected by the recognition algorithm, probably due to
 
 In contrast with particle \textit{B}, the support of particle \textit{C} could not be determined at room temperature, parts of the particle systematically missing from the reconstructions.
 No dislocation could be identified at the interface with the substrate but rather a lack of convergence of the support.
-Heating the sample to \qty{300}{\degreeCelsius} under Argon did not improve the quality of the measurements.
-Interestingly, the introduction of ammonia in the reactor at the beginning of the oxidation cycle had the effect of lowering the average strain inside the particle, and allowed the convergence of the support.
-The particle, shown in fig. \ref{fig:D6Facets}, was thus first reconstructed at \qty{300}{\degreeCelsius} under \qty{490}{\milli\bar} of argon and \qty{10}{\milli\bar} of ammonia in the reactor.
+Heating the sample to \qty{300}{\degreeCelsius} under Argon did not improve the quality of the reconstruction.
+Interestingly, the introduction of ammonia in the reactor at the beginning of the oxidation cycle had the effect of lowering the average strain inside the particle (discussed further), and allowed the convergence of the support.
+The particle \textit{C}, shown in fig. \ref{fig:D6Facets}, was thus first reconstructed at \qty{300}{\degreeCelsius} under \qty{294}{\milli\bar} of argon and \qty{6}{\milli\bar} of ammonia in the reactor.
 
 \begin{figure}[!htb]
     \centering
@@ -51,7 +47,7 @@ The particle, shown in fig. \ref{fig:D6Facets}, was thus first reconstructed at 
 Particle \textit{B} exhibits a more rectangular shape without any \{113\} facets, \qty{10.8}{\percent} of its surface is covered by six \{100\} facets, \qty{6.4}{\percent} by \{110\} facets, and \qty{36.3}{\percent} by \{111\} facets.
 The particle is at the largest \qty{800}{\nm} wide.
 Only \qty{53.4}{\percent} of the surface voxels were determined to belong to facets, there is for example a large area between the (111) and ($1\bar{1}1$) facets (fig \ref{fig:D6Facets} - left) that could correspond to the missing (101) facet.
-Compared to particle \textit{C}, the area between the (100)-type facets and ($\bar{1}1\bar{1}$)-type facets is very flat and is not expected to contains higher index facets.
+Compared to particle \textit{C}, the area between the (100)-type facets and ($\bar{1}1\bar{1}$)-type facets is clearly determined, and not expected to contains higher index facets.
 
 The two nanoparticles have a very different shape and surface structure, resumed in tab. \ref{tab:FacetCoverage}.
 The percentage of the total surface area covered by \{100\} and \{111\} facets is similar (respectively about \qty{10}{\percent} and \qty{36}{\percent}).
@@ -62,9 +58,11 @@ Most importantly, the large nanoparticle does not exhibit high Miller index face
     \centering
     \begin{tabular}{@{}llllll@{}}
     \toprule
-    Facet Type & \{100\} & \{110\} & \{111\} & \{113\} & None \\ \midrule
-    Particle B & 0.105 (6) & 0.231 (9) & 0.352 (8) & 0.073 (7) & 0.239 \\ \bottomrule
+    Facet Type & \{100\} & \{110\} & \{111\} & \{113\} & None \\
+    \midrule
+    Particle B & 0.105 (6) & 0.231 (9) & 0.352 (8) & 0.073 (7) & 0.239 \\
     Particle C & 0.108 (6) & 0.064 (8) & 0.363 (8) & 0 & 0.465 \\
+    \bottomrule
     \end{tabular}%
     \caption{
         Particle surface area covered by facet type, the number in parenthesis designates the amount of each facet identified on the surface.
@@ -72,8 +70,9 @@ Most importantly, the large nanoparticle does not exhibit high Miller index face
     \label{tab:FacetCoverage}
 \end{table}
 
-Together with nanoparticle \textit{A}, this results shows that the sample used during this experiment is covered with many different nanoparticles that all together contribute to the catalytic activity and probably show an even greater variance of shape and size.
-The current analysis using BCDI can only aim to reveal the structure variation during a catalytic reaction of a few nanoparticles without statistically representing the population on the sample, the measurement process being currently too time consuming to probe more than a few nanoparticles.
+Together with nanoparticle \textit{A}, this results shows that the sample used during this experiment is covered with many different nanoparticles that all together contribute to the catalytic activity, and probably show an even greater variance of shape and size.
+The current analysis using BCDI can only aim to reveal the structure variation during a catalytic reaction of a few selected nanoparticles.
+Statistically representing the population on the sample is impossible, the measurement process being currently too time consuming to probe more than a few nanoparticles.
 
 The ammonia oxidation cycle was started at \qty{300}{\degreeCelsius}, with the introduction of ammonia.
 The different atmospheres used to probe the relation between nanoparticle structure and selectivity have been introduced in tab. \ref{tab:ConditionsNanoparticles}.
@@ -87,7 +86,7 @@ Both the retrieved displacement and strain fields are represented with their res
 \subsubsection{Particle B}
 
 A different behaviour during the oxidation of ammonia was observed on both nanoparticles.
-Particle \textit{B}, which is smaller and thus scatters more weakly than particle $C$, was difficult to reconstruct from the start of the increase of temperature to \qty{300}{\degreeCelsius}.
+Particle \textit{B}, which is smaller and thus scatters more weakly than particle $C$, was difficult to reconstruct once the temperature increased to \qty{300}{\degreeCelsius}.
 
 \begin{figure}[!htb]
     \centering
@@ -106,7 +105,8 @@ Choosing a low threshold for the particle iso-surface could still be done, but r
 The small volume of the particle also probably impacts the quality of the measurements, increasing the spatial resolution and leading to this \textit{rounding} of the particle.
 Some reconstructions showed a good quality at \qty{300}{\degreeCelsius}, but in a larger sense recovering the facets on the particle surface in a reproducible way became impossible.
 
-Increasing the temperature to \qty{400}{\degreeCelsius} under inert atmosphere was at the origin of the appearance of a defect in the particle, visible directly in reciprocal space by the shape of the 3D diffraction patterns, split in two parts (fig. \ref{fig:B7Ortho}), which did not improve the phase retrieval quality.
+To be able to quantify the strain inside the particle, the 3D diffraction patterns were orthogonalised in $q$-space (fig. \ref{fig:B7Ortho}).
+Increasing the temperature to \qty{400}{\degreeCelsius} under inert atmosphere was at the origin of the appearance of a defect in the particle, visible directly in reciprocal space by the shape of the 3D diffraction patterns, split in two parts (fig. \ref{fig:B7Ortho}, transition from a to b), which did not improve the phase retrieval quality.
 
 \begin{figure}[!htb]
     \centering
@@ -128,17 +128,18 @@ Increasing the temperature to \qty{400}{\degreeCelsius} under inert atmosphere w
 \end{figure}
 
 A signal parallel to the crystal truncation rod in the [111] direction is observed slightly shifted in $\vec{q}_y$, interfringes in the [111] direction are also visible with a slightly lower interval than on the original CTR.
-The distance between the [111] oriented rod and the second signal increases in $q_y$ during the ammonia oxidation cycle, at the end of which a third signal parallel to the two others can be observed.
+The distance between the [111] oriented rod and the second signal increases in $q_y$ during the ammonia oxidation cycle, at the end of which a third signal parallel to the two others can be observed (fig. \ref{fig:B7Ortho} - c).
 The maximum of both signals seems to be at the same value in $q_z$, which can be related to the average lattice parameter inside the particle.
 
 The defects are also visible perpendicularly to the particle substrate and through the particle in 3D in appendix \ref{app:AppendixB7}, ultimately resulting in holes in the Bragg electronic density \parencite{Clark2015, Dupraz2015}.
 
-To be able to quantify the strain inside the particle and the magnitude of the defect, the 3D diffraction patterns were fitted by summing the intensity scattered from particle $C$ around the (111) platinum Bragg peak in the ($\vec{q}_x$, $\vec{q}_y$), ($\vec{q}_y$, $\vec{q}_z$) and ($\vec{q}_z$, $\vec{q}_x$) directions after orthogonalisation of the diffraction pattern in $q$-space.
+The intensity scattered from particle $C$ around the (111) platinum Bragg peak was summed along the ($\vec{q}_x$, $\vec{q}_y$), ($\vec{q}_y$, $\vec{q}_z$) and ($\vec{q}_z$, $\vec{q}_x$) planes, and respectively fitted in the $\vec{q}_z$, $\vec{q}_x$ and $\vec{q}_y$ directions.
+($\vec{x}$, $\vec{y}$, $\vec{z}$) designates the sample frame, where the $\vec{z}$ direction is parallel to the [111] direction from the epitaxy relationship of the particle on the substrate.
 The sum in the planes perpendicular to the $\vec{q}_x$ and $\vec{q}_y$ directions carry information about the in-plane particle shape and strain, whereas the sum perpendicular to the $\vec{q}_z$ direction carries information about the out-of-plane particle shape and strain.
-The $\vec{z}$ direction is related to the [111] direction from the epitaxy relationship of the particle on the substrate.
 
-The summed intensities were then fitted in each direction by a Lorentzian shape function to be able to extract the FWHM of the peak in the three directions ($2\sigma_x$, $2\sigma_y$ and $2\sigma_z$), and compute the average interplanar spacing from the peak position in $q$-space.
-Once the second signal appeared in $\vec{q}_y$, two Lorentzian profiles were used to fit both peaks, the FWHM in fig. \ref{fig:B7FWHM} in $\vec{q}_y$ is equal to the sum of the FWHM from each peak.
+The summed intensities were then fitted in each direction by a Lorentzian shape function to extract the Bragg peak full width at half maximum (FWHM) in each direction: FWHM$_x$, FWHM$_y$, FWHM$_z$.
+The average interplanar spacing was also computed from the peak position in $q$-space.
+Once the second signal appeared in $\vec{q}_y$, two Lorentzian profiles were used to fit both peaks, FWHM$_y$ in fig. \ref{fig:B7FWHM} is equal to the sum of FWHM$_y$ from each peak.
 
 A typical fit is shown in appendix \ref{fig:FitB73D}, the retrieved FWHM are shown in fig. \ref{fig:B7FWHM}, the average interplanar spacing and homogeneous strain are shown in fig. \ref{fig:B7Latpara}.
 
@@ -146,30 +147,31 @@ A typical fit is shown in appendix \ref{fig:FitB73D}, the retrieved FWHM are sho
     \centering
     \includegraphics[width=\textwidth]{/home/david/Documents/PhD/Figures/bcdi_data/B7/fwhm_B7_two_peaks.pdf}
     \caption{
-        Evolution of the full width at half maximum (FWHM, $2\sigma$) for particle B in the $\vec{q}_x$, $\vec{q}_y$ and $\vec{q}_z$ directions at \qty{25}{\degreeCelsius}, \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius} as a function of the ammonia to oxygen ratio.
+        Evolution of the full width at half maximum (FWHM) for particle B in the $\vec{q}_x$, $\vec{q}_y$ and $\vec{q}_z$ directions at \qty{25}{\degreeCelsius}, \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius} as a function of the ammonia to oxygen ratio.
         The reproduction of measurements at fixed conditions yield multiple data points, lines at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius} link the data points in the order of the measurements.
     }
     \label{fig:B7FWHM}
 \end{figure}
 
-A decrease of $\sigma_z$ can be observed between successive measurements under argon after heating the sample to \qty{300}{\degreeCelsius}, whereas the values of $\sigma_x$ and $\sigma_y$ are stable, which could be due to the stabilisation of the particle after the temperature increase.
-Introducing ammonia in the reactor has the effect of increasing $\sigma_x$ and $\sigma_y$ without increasing $\sigma_z$, thus probably related to an increase of the in-plane strain in the particle.
+A decrease of FWHM$_z$ can be observed between successive measurements under argon after heating the sample to \qty{300}{\degreeCelsius}, whereas the values of FWHM$_x$ and FWHM$_y$ are stable, which could be due to the stabilisation of the particle after the temperature increase.
+Introducing ammonia in the reactor has the effect of increasing FWHM$_x$ and FWHM$_y$ without increasing FWHM$_z$, thus probably related to an increase of the in-plane strain in the particle.
 A decrease of the FWHM can be seen in all three directions when oxygen is introduced in the reactor, which may be associated to a global decrease of the particle strain.
-The range of values in $\sigma_z$ is very low and if a slight increase is observed as a function of the ammonia to oxygen ratio, it is only for very small values.
-No clear evolution can be observed in $\sigma_x$ or $\sigma_y$.
+The range of values in FWHM$_z$ is very low and if a slight increase is observed as a function of the ammonia to oxygen ratio, it is only for very small values.
+No clear evolution can be observed in FWHM$_x$ or FWHM$_y$.
 
-On one hand, the values of $\sigma_z$ at \qty{400}{\degreeCelsius} are stable until the ammonia to oxygen ratio becomes equal to one, which can be linked to an increase of the out-of-plane strain in the particle.
+On one hand, the values of FWHM$_z$ at \qty{400}{\degreeCelsius} are stable until the ammonia to oxygen ratio becomes equal to one, which can be linked to an increase of the out-of-plane strain in the particle.
 Higher amounts of oxygen further continue this increase.
 
-A large jump is observed for $\sigma_y$ after the increase of temperature under inert atmosphere, being multiplied by \qty{50}{\percent} and \qty{100}{\percent} in the first and second measurements.
-No jump is observed for $\sigma_x$ in the first measurement, but a large increase is still observed in the second measurement.
-This coincides with the appearance of a new signal observed in fig. \ref{fig:B7Ortho}, perpendicular to $\vec{q}_z$, \textit{i.e.} in the ($\vec{q}_x, \vec{q}_y$) plane, mostly shifted in $q_y$ in comparison to the centre of the Bragg peak.
+A large jump is observed for FWHM$_y$ after the increase of temperature under inert atmosphere, being multiplied by \qty{50}{\percent} and \qty{100}{\percent} in the first and second measurements.
+No jump is observed for FWHM$_x$ in the first measurement, an increase is observed in the second measurement, but not as important as for FWHM$_y$.
+This coincides with the appearance of a new signal observed in fig. \ref{fig:B7Ortho} perpendicular to $\vec{q}_z$, \textit{i.e.} in the ($\vec{q}_x, \vec{q}_y$) plane, mostly shifted in $q_y$ in comparison to the centre of the Bragg peak.
+This signal is linked to the appearance of a defect in the particle.
 
 The introduction of ammonia does not have a visible effect in $\vec{q}_z$, but decreases the FWHM in both $\vec{q}_x$ and $\vec{q}_y$ in comparison to the second measurement under argon.
-Both $\sigma_x$ and $\sigma_y$ increase together with the ammonia to oxygen ratio, $\sigma_y$ plateaus when the ratio is equal to 1, whereas $\sigma_x$ largely increases when the ratio becomes equal to 8.
+Both FWHM$_x$ and FWHM$_y$ increase together with the ammonia to oxygen ratio, FWHM$_y$ plateaus when the ratio is equal to 1, whereas FWHM$_x$ largely increases when the ratio becomes equal to 8.
 
-The FWHM under argon after and before the oxidation cycle are similar at \qty{300}{\degreeCelsius} but not at \qty{400}{\degreeCelsius}, a temperature at which the oxidation cycle completely changed the shape and strain state of the particle.
-The particle shape is not reversible at \qty{400}{\degreeCelsius} after the oxidation cycle..
+The FWHM under argon after and before the oxidation cycle are similar at \qty{300}{\degreeCelsius} but not at \qty{400}{\degreeCelsius}, a temperature at which the oxidation cycle completely changed the shape and strain state of the particle, visible in app. \ref{app:AppendixB7}.
+The particle shape is not reversible at \qty{400}{\degreeCelsius} after the oxidation cycle.
 
 \begin{SCfigure}
     \centering
@@ -182,7 +184,7 @@ The particle shape is not reversible at \qty{400}{\degreeCelsius} after the oxid
     \label{fig:B7Latpara}
 \end{SCfigure}
 
-Two main phenomena of interest must be kept in mind from the evolution of the interplanar spacing in fig. \ref{fig:B7Latpara}, besides the expected increase of the lattice parameter from the increase of temperature.
+Two main phenomena of interest must be kept in mind from the evolution of the interplanar spacing in fig. \ref{fig:B7Latpara}, besides the expected increase of the lattice parameter from the increase of temperature, verified in the previous section.
 First there a very important increase (\qty{0.08}{\percent}) of the homogeneous strain following the introduction of ammonia at \qty{300}{\degreeCelsius}.
 The interplanar spacing stays approximately equal to the same value afterwards during the ammonia oxidation cycle.
 Secondly, there is an increase of about \qty{0.02}{\percent} of the homogeneous strain at \qty{400}{\degreeCelsius} when the ammonia to oxygen ratio reaches the value of one.
@@ -190,7 +192,7 @@ Both of these phenomena are observed at conditions for which changes in the FWHM
 
 Finally, to be able to give a first estimation of the amount of strain inside the particle, the strain field energy defined as the sum of the product of stress and strain integrated over the particle \parencite{Cahn1959} was computed following the work performed by Ulvestad et al in \cite*{Ulvestad2015a} and by Kim et al. \cite*{Kim2019}.
 
-Assuming cubic symmetry and isotropic shear-free conditions within the unit cell, we can simplify the strain field energy to eq. \ref{eq:SFE}.
+Assuming cubic symmetry and isotropic shear-free conditions within the unit cell, the strain field energy is simplified to eq. \ref{eq:SFE}.
 Here, $G$ and $L$ represent the material's Lame parameters, which can be estimated from Young's modulus $E$ and Poisson ratio $\nu$, as described in eq. \ref{eq:GandNu} \parencite{Mavko2020}.
 
 \begin{equation}
@@ -203,7 +205,7 @@ Here, $G$ and $L$ represent the material's Lame parameters, which can be estimat
     \label{eq:GandNu}
 \end{align}
 
-The evolution of the strain field energy as a function of each scan to be able to compare with the 3D reconstructions of the particle shown in appendix \ref{app:AppendixB7} is presented in fig. \ref{fig:B7SFE}.
+The evolution of the strain field energy as a function of each scan to be able to compare with the 3D reconstructions of the particle shown in app. \ref{app:AppendixB7} is presented in fig. \ref{fig:B7SFE}.
 For a qualitative approximation of the strain field energy, the Young's modulus was taken equal to \qty{153.3}{\giga\pascal} and the Poisson ratio to \num{0.401} based on literature values at \qty{400}{\degreeCelsius} \parencite{Matthey2022}.
 
 \begin{figure}[!htb]
@@ -220,18 +222,21 @@ The strain field energy shows very little evolution at \qty{300}{\degreeCelsius}
 However, the values of the strain field energy are observed to increase under reacting conditions at \qty{400}{\degreeCelsius}, multiplied approximately by \num{3} when the \ce{O_2}/\ce{NH_3} ratio is equal to 1, and by \num{9} when the \ce{O_2}/\ce{NH_3} ratio is equal to 8.
 This result is consistent with the evolution of the different FWHM in fig. \ref{fig:B7FWHM} and with the 3D shape of the particle.
 
-To summarise, the introduction of ammonia at \qty{300}{\degreeCelsius} has resulted in a slight increase of the in-plane strain observed from the evolution of the peak FWHM in the $\vec{q}_x$ and $\vec{q}_y$ directions in fig. \ref{fig:B7FWHM}, together with a large increase of the homogeneous strain observed from the value of the $d_{111}$ interplanar spacing in fig. \ref{fig:B7Latpara}, which was not reversed after the removal of ammonia following the end of the oxidation cycle.
+To summarise, the introduction of ammonia at \qty{300}{\degreeCelsius} has resulted in (i) a slight increase of the in-plane strain, observed from the evolution of the peak FWHM in the $\vec{q}_x$ and $\vec{q}_y$ directions in fig. \ref{fig:B7FWHM}.
+(ii) a large increase of the homogeneous strain, observed from the value of the $d_{111}$ interplanar spacing in fig. \ref{fig:B7Latpara}, which was not reversed after the removal of ammonia following the end of the oxidation cycle.
+These changes can be linked to the first reduction of the particle, previously only exposed to air and argon, since such changes are not observed at \qty{400}{\degreeCelsius}.
 No changes in the particle strain and structure as a function of the ammonia to oxygen ratio could be detected at \qty{300}{\degreeCelsius}.
 
 The most important changes in the particle structure occur at \qty{400}{\degreeCelsius}.
-Heating the temperature of the reactor under inert atmosphere has resulted in the appearance of a defect visible directly in reciprocal space (fig. \ref{fig:B7Ortho}), and by the evolution of the peak FWHM in $\vec{q}_y$ (fig. \ref{fig:B7FWHM}).
-The increase of strain inside the particle is visible in 3D by the progressive importance of the hole in the reconstructed volume, and by the evolution of the strain field energy (fig. \ref{fig:B7SFE}), with a clear transition during the simultaneous presence of both ammonia and oxygen in the reactor, with the same partial pressures (scans 3951, 3958 and 4002 in the 3D reconstructions and strain field energy).
-This transition is also visible in the FWHM of the Bragg peak in $\vec{q}_z$, which can be related to an increase of the out-of-plane strain inside the particle.
+Heating the temperature of the reactor under inert atmosphere has resulted in the appearance of a defect visible directly in reciprocal space (fig. \ref{fig:B7Ortho}), and by the evolution of FWHM$_y$ (fig. \ref{fig:B7FWHM}).
+The increase of strain inside the particle is also visible in 3D by the progressive importance of holes in the reconstructed volume (app. \ref{app:AppendixB7}), and by the evolution of the strain field energy (fig. \ref{fig:B7SFE}).
+Interestingly, a transition is observed during the simultaneous presence of both ammonia and oxygen in the reactor, when \ce{O_2}/\ce{NH_3} = 1 (scans 3951, 3958 and 4002).
+This transition is also visible in FWHM$_z$ (fig. \ref{fig:B7FWHM}), which can be related to an increase of the out-of-plane strain inside the particle.
 
 \subsubsection{Particle C}
 
 As mentioned earlier, particle \textit{C} could only be reconstructed under the presence of ammonia in the reactor.
-Interestingly, no changes in the particle shape or surface strain values have been seen observed during the exposition to the reactants (appendix \ref{app:AppendixB7}).
+Interestingly, no changes in the particle shape or surface strain values have been observed during the exposition to the reactants (appendix \ref{app:AppendixB7}).
 
 \begin{figure}[!htb]
     \centering
@@ -249,20 +254,20 @@ Interestingly, no changes in the particle shape or surface strain values have be
 \end{figure}
 
 When removing ammonia and oxygen at \qty{300}{\degreeCelsius}, the particle could not be reconstructed anymore, reproducing the same behaviour as before the introduction of ammonia.
-Increasing the temperature to \qty{400}{\degreeCelsius} did not improve the reconstruction quality, the support did not converge during phase retrieval.
+Increasing the temperature to \qty{400}{\degreeCelsius} did not improve the reconstruction quality as the support did not converge during phase retrieval.
 Using the support of the particle reconstructed at \qty{300}{\degreeCelsius} under ammonia as a starting guess for the algorithms did not suffice to reach a good final solution.
 The reconstructions under inert atmosphere before introducing ammonia or after removing both reactants from the cell presented in appendix \ref{app:AppendixB7} have been performed by limiting the support update to every 200 iteration (for a total of 1100 algorithm iteration during phase retrieval, meaning that the support is only changed 5 times), and still present a highly heterogeneous Bragg electronic density.
 
 To understand why it was impossible to successfully carry out the phase retrieval process, the diffraction pattern around the (111) Bragg peak under the presence of both reacting gases and after their removal was orthogonalised in $q$-space, presented in fig. \ref{fig:D6Ortho}.
 
-The diffraction pattern before the introduction of ammonia (fig. \ref{fig:D6Ortho} - a) exhibits a slightly distorted shape which can be related to the presence of heterogeneous strain in the particle, typically at the interface with the substrate.
+The diffraction pattern before the introduction of ammonia (fig. \ref{fig:D6Ortho} - a) exhibits a slightly distorted shape along $\vec{q}_z$, which can be related to the presence of heterogeneous strain in the particle, typically at the interface with the substrate.
 The introduction of ammonia in the reactor has removed this distortion (fig. \ref{fig:D6Ortho} - b), which generally improves the quality of phase retrieval.
 
 \begin{figure}[!hbt]
     \centering
     \includegraphics[width=\textwidth]{/home/david/Documents/PhD/Figures/bcdi_data/D6/fwhm_D6.pdf}
     \caption{
-        Evolution of the full width at half maximum (FWHM, $2\sigma$) for particle C in the $\vec{q}_x$, $\vec{q}_y$ and $\vec{q}_z$ directions at \qty{25}{\degreeCelsius}, \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius} as a function of the ammonia to oxygen ratio.
+        Evolution of the full width at half maximum (FWHM) for particle C in the $\vec{q}_x$, $\vec{q}_y$ and $\vec{q}_z$ directions at \qty{25}{\degreeCelsius}, \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius} as a function of the ammonia to oxygen ratio.
         The reproduction of measurements at fixed conditions yield multiple data points, lines at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius} link the data points in the order of the measurements.
         No scans were performed at \qty{400}{\degreeCelsius} under Argon after the oxidation cycle.
     }
@@ -270,15 +275,17 @@ The introduction of ammonia in the reactor has removed this distortion (fig. \re
 \end{figure}
 
 Interestingly, the diffraction pattern after the removal of both gases in the reactor (fig. \ref{fig:D6Ortho} - c) is not similar to the measurement before the oxidation cycle (fig. \ref{fig:D6Ortho} - b), both diffraction patterns are collected under argon.
-In general, the fringes are less visible in all direction, especially visible in the ($\vec{q}_x$, $\vec{q}_y$) plane, round areas of higher intensity also appeared around the Bragg peak.
-Most importantly, the coherence fringes situated in the [111] direction, \textit{i.e.} along $\vec{q}_z$ show a completely different pattern, as if two two CTRs were on top of each other, one with larger rectangular fringes, while the other one has smaller round fringes.
+In general, the fringes are less visible in all direction, especially in the ($\vec{q}_x$, $\vec{q}_y$) plane, areas of higher intensity also appeared around the Bragg peak.
+Most importantly, the coherence fringes situated in the [111] direction, \textit{i.e.} along $\vec{q}_z$ show a completely different pattern, as if two CTRs were on top of each other, one with larger rectangular fringes, while the other one has smaller round fringes.
 The particle clearly suffered a change of shape after the removal of the reacting gases, meaning that different phenomena before and after the oxidation cycle impinge on the reconstruction quality.
+It is possible that the first exposition to ammonia has has the effect of reducing the particle that was beforehand only exposed to air and argon.
+Thus, removing ammonia and oxygen at the end of the cycle can yield a different state than before the oxidation cycle.
 
-The same kind of diffraction patterns are observed at \qty{400}{\degreeCelsius} after heating under argon as in fig. \ref{fig:D6Ortho} - (c), and after the introduction of ammonia as in fig. \ref{fig:D6Ortho} (b), meaning that the presence of \ce{NH_3} in the reactor \textit{relaxes} the particle, which can then easily be reconstructed.
+The same kind of diffraction patterns are observed at \qty{400}{\degreeCelsius} after heating under argon as in fig. \ref{fig:D6Ortho} (c), and after the introduction of ammonia as in fig. \ref{fig:D6Ortho} (b), meaning that the presence of \ce{NH_3} in the reactor lowers the strain in the particle, which can then easily be reconstructed.
 
 The particle FWHM in all three directions follows the same evolution as a function of the different atmospheres, meaning that the same phenomena occurs in all direction of the particle.
 The FWHM decreases following the introduction of ammonia both at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius}, and only slightly increase during the exposition to oxygen.
-Returning to argon atmosphere, \textit{i.e.} removing ammonia and oxygen yield FWHM values similar to those measured after the heating to \qty{300}{\degreeCelsius} under argon.
+Returning to argon atmosphere, \textit{i.e.} removing ammonia and oxygen yields FWHM values similar to those measured after heating to \qty{300}{\degreeCelsius} under argon.
 
 \begin{SCfigure}
     \centering
@@ -316,9 +323,9 @@ To summarise, particle \textit{C} seems to have suffered a transition at \qty{30
 The diffraction pattern was shown to not be exactly reproducible when returning to inert atmosphere, but still showing a decrease of sharpness regarding the position and intensity of the interfringes.
 % It is difficult to be certain of the impact of the adsorption of ammonia since there is a lack of good quality reconstruction for comparative studies before the introduction of ammonia in the reactor, preventing an analysis of the facet strain.
 
-The transition can be observed in both the strain field energy (fig. \ref{fig:D6SFE}) and in the FWHM of the three-dimensional Bragg peak (fig. \ref{fig:D6FWHM}).
-The interplanar spacing computed from the position of the Bragg peak in $q$-space shows an additional transition when first introducing oxygen in the cell, not visible in the strain field energy of in the FWHMs, which can be linked to a change of strain at the interface with the substrate.
-The influence of the introduction of oxygen on the interfacial strain is unclear since no clear and reproducible evolution of the facet strain is visible on the particle surface (fig. \ref{app:AppendixD6}).
+The transition can be observed in both the strain field energy (fig. \ref{fig:D6SFE}), and in the FWHM of the three-dimensional Bragg peak (fig. \ref{fig:D6FWHM}).
+The interplanar spacing computed from the position of the Bragg peak in $q$-space shows an additional transition when first introducing oxygen in the cell, not visible in the strain field energy of in the FWHMs, which can tentatively be linked to a change of strain at the interface with the substrate.
+% The influence of the introduction of oxygen on the interfacial strain is unclear since no clear and reproducible evolution of the facet strain is visible on the particle surface (app. \ref{app:AppendixD6}).
 % The values of the heterogeneous surface strain $\epsilon_{zz}$ being very low (almost always below \qty{0.1}{\percent}, fig. \ref{fig:D6Facets}), it is also complicated to quantify the strain evolution.
 
 \subsubsection{Mass spectrometry results}
@@ -331,7 +338,7 @@ The original mass spectrometer signal as a function of time is available in the 
     \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2021_06_BCDI_NH3/gas_analysis/figures/product_comparison.pdf}
     \caption{
         Evolution of reaction product partial pressures during the BCDI experiment on the patterned sample containing Pt[111]||Al$_2$O$_3$[0001] nanoparticles, at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius}.
-        Mean partial pressures during \qty{1}{\minute} at the end of each condition, recorded from a leak in the reactor output as detailed in sec. \ref{sec:XCAT}.
+        Mean partial pressures during \qty{1}{\minute} at the end of each condition, recorded from a leak in the reactor output.
         The pressure under \qty{49}{\ml\per\min} of argon and \qty{1}{\ml\per\min} of ammonia has been subtracted.
     }
     \label{fig:RGANanoparticlesBCDIComparison}
