--- a/Sections/3_Results_Nanoparticles/Conclusion.tex
+++ b/Sections/3_Results_Nanoparticles/Conclusion.tex
@@ -2,16 +2,20 @@
 
 % Particle A, Temp ramp
 The reshaping of a Pt nanoparticle (particle \textit{A}) during heating from \qty{125}{\degreeCelsius} to \qty{600}{\degreeCelsius} under an inert gas flow was put into evidence.
-An important evolution as a function of the sample temperature of the type of facets present on the particle substrate (fig. \ref{fig:AmaterasuFacetsEvolution}), and of the presence or not of dislocations at the interface (fig. \ref{fig:AmaterasuA}, \ref{fig:AmaterasuB}) was reported.
+An important evolution in the type of facets present near the particle interface with the substrate was reported as a function of the sample temperature (fig. \ref{fig:AmaterasuFacetsEvolution}).
+An interfacial dislocation was successfully removed by temperature treatment, yielding a defect free interface until the introduction of ammonia at \qty{600}{\degreeCelsius}, which induced the appearance of a dislocation network (fig. \ref{fig:AmaterasuA}, \ref{fig:AmaterasuB})
 
 The importance of the metal-support interactions for catalysis was demonstrated for smaller nanoparticles (below \qty{4}{\nm}) in a general study by van Deelen et al. \parencite*{vanDeelen2019}.
-In this study, the importance of taking into account the presence of interfacial strain when studying the facet strain was also highlighted with particle \textit{A} (fig. \ref{fig:AmaterasuStrain}), similarly to other BCDI studies of catalytic reactions.
+In the current study, the importance of taking into account the presence of interfacial strain was also highlighted with particle \textit{A} (fig. \ref{fig:AmaterasuStrain}), similarly to other BCDI studies of catalytic reactions.
 For example, Kim et al. \parencite*{Kim2021} have measured different strain evolution for \{111\} facets depending on their orientation with the \ce{SrTiO_3} substrate (\ce{CO} oxidation, Pt-Rh nanoparticles, \qty{100}{\nm} large).
 Similar conclusions have been reached by Dupraz et al. \parencite*{Dupraz2022}, also during the oxidation of \ce{CO} with Pt nanoparticles (\qty{300}{\nm} large particle).
+The relative facet size can also have an impact on the facet strain.
+Both effects could not be de-correlated in this study since facets of same structure but different orientation, \textit{i.e.} (1$\bar{1}$1) and ($\bar{1}$1$\bar{1}$), have different sizes, whereas facets of same orientation have similar sizes (e.g. (1$\bar{1}$1)-type facets in fig. \ref{fig:AmaterasuStrain1675}).
 
 Particle \textit{A} exhibited a symmetric shape only at \qty{450}{\degreeCelsius} (fig. \ref{fig:AmaterasuFacetsEvolution}), isolated \{110\} \{212\} and \{211\} facets were otherwise detected.
 A reconstruction at a higher temperature (\qty{600}{\degreeCelsius}) showed a hole in the Bragg electronic density near the particle substrate (fig. \ref{fig:AmaterasuB}).
-The evolution of the lattice parameter as a function of the temperature (fig. \ref{fig:AmaterasuHomoStrain}) shows that nanoparticles do not follow the same thermal relaxation curves as expected from literature values, which is probably due to an important surface/volume ratio, \textit{i.e.} surface energy minimisation processes \parencite{Winterbottom1967, Boukouvala2021}, having an impact on the strain field.
+The evolution of the lattice parameter as a function of the temperature (fig. \ref{fig:AmaterasuHomoStrain}) shows that nanoparticles do not follow the same thermal relaxation curves when in the presence or not of interfacial defects, having an impact on the strain field.
+ % as expected from literature values, which is probably due to an important surface/volume ratio, \textit{i.e.} surface energy minimisation processes \parencite{Winterbottom1967, Boukouvala2021}, having an impact on the strain field.
 
 % Ammonia ox
 The oxidation of ammonia has been extensively studied by the means of surface techniques in the previous and current century as detailed in sec. \ref{sec:LiteratureAmmonia}.
@@ -19,9 +23,9 @@ Since BCDI is still a recent technique first applied to catalysis less than 10 y
 
 % Particle A
 The introduction of ammonia in the reactor at \qty{600}{\degreeCelsius} was linked to an inversion of the average facet strain for particle \textit{A} (fig. \ref{fig:AmaterasuFacetsEvolution}), together with the appearance of a dislocation network at the interface with the substrate (fig. \ref{fig:AmaterasuB}).
-Facets of the same structure and distance from the substrate showed similar strain state (fig. \ref{fig:AmaterasuStrain}).
+Facets of the same structure, size, and distance from the substrate showed similar strain state (fig. \ref{fig:AmaterasuStrain}).
 It is possible that a strong adsorption of ammonia induced such a modification of the strain field that the appearance of a dislocation network was provoked.
-Indeed, no variation of particle shape, or appearance of dislocation was observed throughout this thesis under the same condition, \textit{i.e.} without a change of temperature or atmosphere.
+Indeed, no other variation of particle shape, or appearance of dislocation was observed without a change of temperature.
 Time-resolved measurements of the dynamics of the dislocation network as well as adsorption/desorption cycles could bring additional information supporting this hypothesis.
 
 The influence of the introduction of oxygen at \qty{600}{\degreeCelsius} could not be probed due to the loss of particle \textit{A}, which detached from the substrate.
@@ -30,10 +34,13 @@ The high temperature reached by the nano catalyst during the exothermic oxidatio
 Two additional particles, namely \textit{B} and \textit{C}, were measured at both \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius}, respectively before and after the activation temperature expected from the characterisation of the catalyst shown in fig. \ref{fig:TempRamps}.
 
 % Particle C
-The introduction of ammonia at \qty{300}{\degreeCelsius} can be linked to a global decrease of the heterogeneous strain in particle \textit{C}, whose surface consists exclusively of \{111\}, \{110\} and \{100\} facets, visible from the decrease of the strain field energy in fig. \ref{fig:D6SFE}, the return to a symmetrical diffraction pattern in fig. \ref{fig:D6Ortho}, and the decrease of the FWHM in all three directions in fig. \ref{fig:D6FWHM}.
-The opposite (same) effect was observed after removing (introducing) ammonia from the reactor at \qty{300}{\degreeCelsius} (\qty{400}{\degreeCelsius}), supporting the hypothesis of a nitrogen-rich (\ce{NH_2}, \ce{NH}, \ce{N}) adsorption/desorption induced hysteresis cycle on the particle surface.
+The introduction of ammonia at \qty{300}{\degreeCelsius} can be linked to a global decrease of the heterogeneous strain in particle \textit{C}, whose surface consists exclusively of \{111\}, \{110\} and \{100\} facets (tab. \ref{tab:FacetCoverage}).
+This effect is visible from the decrease of the strain field energy in fig. \ref{fig:D6SFE}, the return to a symmetrical diffraction pattern in fig. \ref{fig:D6Ortho}, and the decrease of the FWHM in all three directions in fig. \ref{fig:D6FWHM}.
+The opposite (same) effect was observed after removing (introducing) ammonia from the reactor at \qty{300}{\degreeCelsius} (\qty{400}{\degreeCelsius}), supporting the hypothesis of a nitrogen-rich (\ce{NH_x}, \ce{N}) adsorption/desorption induced hysteresis cycle on the particle surface.
 The mechanism of such a cycle could correspond to a decrease of the surface strain magnitude by adsorption, thus relaxing the particle bulk by removing nano defects present to accommodate the high surface strain.
-However, such a scenario implies changes in the surface strain when introducing ammonia, which are not visible since the reconstruction of the measurements performed under inert atmosphere do not converge towards a well defined support.
+Such a scenario implies changes in the surface strain when introducing ammonia, which are not visible since the reconstruction of the measurements performed under inert atmosphere do not converge towards a well defined support.
+% The introduction of ammonia at \qty{600}{\degreeCelsius} when measuring particle \textit{A} has had the opposite effect, \textit{i.e.} the creation of a dislocation network.
+% However, both particles have different shape and facet coverage, which can be linked to different behaviour as highlighted in this study.
 
 The absence of change in the facet strain following the introduction of oxygen and during the oxidation of ammonia can be due to different phenomena.
 
@@ -49,14 +56,16 @@ The surface strain would then not be expected to evolve during change of atmosph
 This finding would be in contradiction with literature finding that have proved the importance of prior atomic \ce{O} and \ce{OH} coverage for the de-hydrogenation process of \ce{NH_3}, during a largely accepted Langmuir-Hinshelwood reaction mechanism \parencite{Bradley1995, Mieher1995,vandenBroek1999, Kim2000}.
 The pre-exposition of the particle to ammonia would prevent this mechanism and thus the production of \ce{N_2}, \ce{NO} and \ce{NO_2}.
 
-Moreover, a transition was observed in the homogeneous strain for particle \textit{C} at \qty{300}{\degreeCelsius} when introducing oxygen in the reactor (fig. \ref{fig:D6Latpara}), which was not reproduced at \qty{400}{\degreeCelsius}.
-The origin of this transition is not yet clear.
+Moreover, a transition was observed in the homogeneous strain for particle \textit{C} at \qty{300}{\degreeCelsius} when introducing oxygen in the reactor (fig. \ref{fig:D6Latpara}, up by \qty{0.07}{\percent}), which was not reproduced at \qty{400}{\degreeCelsius}.
 
 % Particle B
-Particle \textit{B}, which exhibits \{113\} facets on its surface at room temperature in addition to \{111\}, \{110\} and \{100\} facets, follows a different structural evolution during the experiment.
+Particle \textit{B}, which exhibits \{113\} facets on its surface at room temperature in addition to \{111\}, \{110\} and \{100\} facets (tab. \ref{tab:FacetCoverage}), follows a different structural evolution during the experiment.
+The surface coverage of \{110\} facets is also four times higher than for particle \textit{C}.
 Heating the sample to \qty{300}{\degreeCelsius} has decreased the visible presence of facets on the particle surface.
 While particle \textit{C} observes a large decrease of heterogeneous strain during the introduction of ammonia, particle \textit{B} suffers both a large increase of homogeneous strain with respect to the room temperature lattice parameter (fig. \ref{fig:B7Latpara}, up by \qty{0.09}{\percent}), together with an increase of the in-plane heterogeneous strain (fig. \ref{fig:B7FWHM}).
 This effect is not reversible when removing ammonia from the reactor at \qty{300}{\degreeCelsius}, nor it is observed again when introducing ammonia at \qty{400}{\degreeCelsius}.
+It is possible to link this effect to the particle first exposition to reducing atmosphere after argon and air.
+The absence of strain evolution in the same condition for particle \textit{C} (fig. \ref{fig:D6Latpara}) can be attributed to different surface states under argon from contaminants/oxides, linked to different facet coverage.
 
 The introduction of oxygen slightly decreases the heterogeneous strain in the particle (fig. \ref{fig:B7FWHM}), the in-plane heterogeneous strain is stable during the oxidation of ammonia while the out-of-plane heterogeneous strain increases slightly.
 Thus, small changes are already visible at \qty{300}{\degreeCelsius} for particle \textit{B} during the oxidation of ammonia.
@@ -65,31 +74,37 @@ The most impressive evolution occurs at \qty{400}{\degreeCelsius}, with the appe
 The influence of the defect in both the heterogeneous (fig. \ref{fig:B7FWHM}, fig. \ref{fig:B7SFE}) and homogeneous strain (fig. \ref{fig:B7Latpara}) is clear once the ratio between \ce{O_2}/\ce{NH_3} ratio is equal to one, an atmosphere under which a non reversible increase of homogeneous and heterogeneous strain is observed.
 Indeed, if the defect appeared during the increase of temperature to \qty{400}{\degreeCelsius}, the particle shape and strain state seems to be stable until specific reaction conditions are achieved.
 To safely link defect dynamics and catalytic activity, several oxidation cycles would have to be measured, as well as an exposition of the particle to progressive amount of oxygen.
-Nevertheless, it can safely be said that the evolution of particle \textit{B} seems to follow the reported activation and reconstruction process of industrial catalyst by defects reported by Hannevold et al. \parencite{Hannevold2005}.
+Nevertheless, it can safely be said that the evolution of particle \textit{B} seems to follow the reported activation and reconstruction process of industrial catalyst by defects reported by Hannevold et al. \parencite*{Hannevold2005}.
 
 % Compare oxidation with literature
 The exposition of platinum nanoparticles epitaxied on glassy carbon to oxygen at \qty{200}{\degreeCelsius} has been probed by Fernandez et al. \parencite*{Fernandez2019}, shown to be linked with an \qty{0.09}{\percent} homogeneous tensile expansion of the particle in the [111] direction, linked to the formation of platinum surface oxides.
-No such expansion was observed on particle \textit{B} or \textit{C} under the presence of oxygen during this experiment.
-The existence of platinum oxides was not monitored and can not be ruled out on particle \textit{B}, but are unlikely on particle \textit{C} that does not show any structural evolution under the presence of oxygen.
+The nanoparticles were not exposed to oxygen without ammonia during this experiment.
+Nevertheless, a similar expansion was observed on particle \textit{C} but during reacting conditions, and only at \qty{300}{\degreeCelsius} (fig. \ref{fig:D6Latpara}, up by \qty{0.07}{\percent}).
+Further increasing the oxygen pressure at \qty{300}{\degreeCelsius} did not have a significant effect on the homogeneous strain.
+The increase of strain on particle \textit{B} under reacting conditions in not reversible when removing the reagents, and not observed at \qty{400}{\degreeCelsius}.
+This means that if oxides have grown under reacting conditions at \qty{300}{\degreeCelsius}, they are stable throughout the experiment, and not removed by the sole presence of ammonia at \qty{400}{\degreeCelsius}.
+The questions on Pt nanoparticles remains, do platinum oxides grow on the sample surface, and are they stable under reacting conditions ?
+Future experiments on single crystals will yield completing information to answer this question.
+Moreover, a different behaviour is observed for particle \textit{B}, for which the homogeneous strain does not evolve with oxygen at \qty{300}{\degreeCelsius} (fig. \ref{fig:D6Latpara}), which would necessarily link the growth of surface oxides to the nanoparticle shape, facet coverage, and initial strain state.
 
 Kim et al. \parencite*{Kim2018} have also shown that the introduction of oxygen was followed by its adsorption on edge sites, visible by magnitude changes in the neighbouring displacement field.
-They hypothesised could be at the origin of different nano catalyst reshaping phenomena measured during the oxidation of \ce{CO} \textit{via} SXRD \parencite{Nolte2008, Hejral2016}, TEM \parencite{Vendelbo2014} and also other BCDI studies \parencite{Abuin2019}.
+Their hypothesis could be at the origin of different nano catalyst reshaping phenomena measured during the oxidation of \ce{CO} \textit{via} SXRD \parencite{Nolte2008, Hejral2016}, TEM \parencite{Vendelbo2014} and also other BCDI studies \parencite{Abuin2019}.
 
-No reshaping of particle \textit{B} or \textit{C} was observed during the study of the ammonia oxidation with BCDI.
-However, a global reshaping of the nanoparticles was revealed by SXRD at \qty{600}{\degreeCelsius} under reacting conditions favouring oxygen rich products, \{113\} and \{110\} facets being probably replaced by \{100\} and \{111\} facets for which the CTR intensity increased.
+No reshaping of the particles \textit{B} or \textit{C} was observed during the study of the ammonia oxidation with BCDI.
+However, a global reshaping of the nanoparticles was revealed by SXRD at \qty{600}{\degreeCelsius} under reacting conditions favouring oxygen rich products, \{113\} and \{110\} facets being replaced by \{100\} and \{111\} facets for which the CTR intensity increased.
 This reshaping was not detected at lower temperatures, no decrease of the [1$\bar{1}$3] oriented CTR could be identified at \qty{300}{\degreeCelsius} or \qty{500}{\degreeCelsius}, meaning that the \{113\} facets present at room temperature on particle \textit{B} may yet still exist at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius}.
-A more detailed analysis of the 3D scattered intensity around the (111) Bragg peak may reveal if the particle has effectively lost the \{113\} facets or not.
+% A more detailed analysis of the 3D scattered intensity around the (111) Bragg peak may reveal if the particle has effectively lost the \{113\} facets or not.
 
 A particle with a similar shape to that of particle \textit{B} was measured by Dupraz et al. \parencite*{Dupraz2022}, \{113\} facets are still visible during the presence of oxygen in the cell.
 The spatial resolution of the experiment is much higher than in the present study, due to the very high brilliance of Petra III in comparison with other $3^{rd}$ generation synchrotrons \parencite{Bilderback2005}.
 %Interestingly, they have also shown a different behaviour when exposing the catalyst to oxygen for the third time, after some \ce{CO} oxidation cycles.
 A relaxation of the out-of-plane heterogeneous strain $\epsilon_{zz}$ was observed on all facets (besides ($\bar{1}$10)-type facets) during the presence of oxygen in the cell.
-No such relaxation was observed during this experiment, which supports that we are effectively measuring not the effect of the oxidation of the particle surface, but of the adsorption/desorption of species linked to the catalytic reaction.
+No such relaxation was observed during this experiment, which supports that the adsorption/desorption of species linked to the catalytic reaction is measured, and not the effect of the oxidation of the particle surface.
 
 % Defects
 The presence of steps/surface defects on Pt(111) facets has been shown to increase the catalytic activity of Pt nanoparticles \parencite{Segner1984, Chen2012}.
 Indeed, defects have an impact of the local strain field, which can in turn influence the adsorption properties of molecules taking part in the reaction.
-During the oxidation of ammonia, defects could play a role in the step-by-step de-hydrogenation process of ammonia on the catalyst surface, favouring \ce{NO} desorption or dissociation and thus influencing the catalyst selectivity.
+During the oxidation of ammonia, defects could play a role in the step-by-step de-hydrogenation process of ammonia on the catalyst surface, e.g. favouring \ce{NO} desorption, and thus influencing the catalyst selectivity.
 
 Similarly to our results on nanoparticle \textit{B}, Kim et al. \parencite*{Kim2019} have measured the defect dynamics on a Pt nanoparticle during the catalytic methane oxidation.
 They have shown a reversible transition of the particle shape induced by the adsorption of oxygen at \qty{425}{\degreeCelsius} (no indication of the oxygen partial pressure), no such transition was observed at \qty{325}{\degreeCelsius}.
@@ -104,28 +119,28 @@ Defect dynamics have also been reported during the catalytic oxidation of \ce{CO
 These result tend to support the importance of defects in the catalytic activity of nanoparticles during the oxidation of ammonia.
 The defect introduced by heating at \qty{400}{\degreeCelsius} has probably altered the adsorption properties of particle \textit{B}, possibly creating steps on top of nanoparticle surface.
 Interestingly the change in the particle strain field is only visible after a certain \ce{O_2}/\ce{NH_3} ratio is reached (fig. \ref{fig:B7SFE}, \ref{fig:B7FWHM}), which can be linked to a transition to the adsorption of oxygen rich species (e.g. \ce{NO}, \ce{N_2O}) on the catalyst surface.
-The reproducibility of the result at \qty{300} and \qty{400} for particle \textit{B} for the same exposition time allow us to safely rule out the possibility of beam induced stuctural changes in particle \textit{B}.
+The reproducibility of the result at \qty{300} and \qty{400} for particle \textit{B} for the same exposition time allow us to safely rule out the possibility of beam induced structural changes in particle \textit{B}.
 
 % RGA
 Reaction products were detected at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius} (fig. \ref{fig:RGANanoparticlesBCDIComparison}), overall an oxygen favoured \ce{O_2}/\ce{NH_3} ratio resulted in a higher proportion of \ce{NO} and \ce{N_2O}, which enabled us to probe the relationship between strain and catalyst selectivity.
-Interestingly, an \textit{activation} of the sample was observed at both \qty{300}{\degreeCelsius} (fig. \ref{fig:RGA300BCDINanoparticles}) and \qty{400}{\degreeCelsius} (fig. \ref{fig:RGA400BCDINanoparticles}).
+Interestingly, an \textit{activation} of the sample was observed at both \qty{300}{\degreeCelsius} (fig. \ref{fig:RGA300BCDINanoparticles}) and \qty{400}{\degreeCelsius} (fig. \ref{fig:RGA400BCDINanoparticles}) when \ce{O_2}/\ce{NH_3} = 2.
 No such effect was observed at \qty{300}{\degreeCelsius} in the previous experiment when using the non-patterned sample during surface x-ray diffraction (fig. \ref{fig:RGASXRDNanoparticlesComparison}).
 The only difference in the history of both samples being that the patterned sample was exposed to reacting conditions at \qty{600}{\degreeCelsius} for approximately \qty{1}{\hour} before this experiment.
-This transition in the product partial pressures does not correspond to the condition at which particle \textit{B} showed a transition in terms of strain field energy or FWHM at \qty{400}{\degreeCelsius}, which occurred under an equal amount of ammonia and oxygen in the reactor.
-This transition could although be a precursor to the \textit{activation} process, keeping in mind that, as underlined by this experiment, the large difference in shape of the nanoparticles on the sample implies different structural evolution under various atmospheres.
+This transition in the product partial pressures when \ce{O_2}/\ce{NH_3} = 2 does not correspond to the condition at which particle \textit{B} showed a transition in terms of strain field energy or FWHM at \qty{400}{\degreeCelsius}, which occurred under an equal amount of ammonia and oxygen in the reactor (\ce{O_2}/\ce{NH_3} = 1).
+This structural transition could be a precursor to the \textit{activation} process, keeping in mind that, as underlined by this experiment, the large difference in shape of the nanoparticles on the sample implies different structural evolution under various atmospheres.
 
 % conclude
-To conclude, we have shown that it is of utmost importance to probe different nanoparticles before drawing a conclusion regarding their global behaviour during a heterogeneous catalytic reaction.
-The importance of the particle shape, \textit{i.e.} facet coverage as well as initial strain state was put into perspective by the study of the oxidation of ammonia at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius}, as a function of the ratio between \ce{Ar} and \ammonia.
+To conclude, it is of utmost importance to probe different nanoparticles before drawing a conclusion regarding their global behaviour during a heterogeneous catalytic reaction.
+The importance of the particle shape, \textit{i.e.} facet size, coverage as well as initial strain state was put into perspective by the study of the oxidation of ammonia at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius}, as a function of the ratio between \ce{O_2} and \ammonia.
 
 The presence of defect in particle \textit{B} was linked to an evolution of the particle strain state and shape once an oxygen rich atmosphere was reached in the reactor, favouring the production of \ce{NO} and \ce{N_2O} over \ce{N_2}
 It is possible that the transformation of particle \textit{B} corresponds to the onset of activation and reconstruction observed in industrial samples, driven by the appearance of defects.
 Moreover, this behaviour could be connected to a more global behaviour of the nanoparticles present on the sample from the visible transition in terms on product pressure visible in the RGA.
 
-Particle \textit{C} has a completely different behaviour, showing no strain evolution during the catalytic reaction, possibly from an initial strain state that lead to strongly adsorbed specied not participating in the catalytic activity.
+Particle \textit{C} has a completely different behaviour, showing no strain evolution during the catalytic reaction, possibly from an initial strain state that lead to strongly adsorbed species not participating in the catalytic activity.
 
 This experiment has confirmed the importance of initial strain states for heterogeneous catalysis and will push forward nanoparticle strain engineering.
-The possibility of having different phenomena occuring under the same reacting conditions was revealed.
+The possibility of having different phenomena occurring under the same reacting conditions was revealed.
 
 Finally, this experiment has both demonstrated the value and limits of Bragg coherent diffraction imaging when studying heterogeneous catalytic reactions.
 The recent improvement of the instrumental setup (rocking curves performed in fly mode instead of step-by-step mode, sample scanning in Bragg conditions to find the nanoparticles, sapphire window in the dome) tend in the right direction.
