--- a/Sections/4_Results_SingleCrystals/Conclusion.tex
+++ b/Sections/4_Results_SingleCrystals/Conclusion.tex
@@ -9,15 +9,15 @@ For Pt(111), a Pt(111)-p(8x8)-R\ang{0} arrangement was measured (fig. \ref{fig:M
 Some of the peaks belonging to the rotated structure can also be described with the following matrix notation: Pt(111)-p$\begin{pmatrix} 1.08 & -0.21 \\ -0.21 & 1.08 \end{pmatrix}$-R\ang{0}, effectively describing a unit cell with a second order peak (fig. \ref{fig:MapsPt111A} - c).
 The Pt(111)-p(8x8)-R\ang{0} was linked to the known $\alpha$-\ce{PtO_2} surface oxide from the magnitude of the lattice parameter and comparison with literature reports under comparable atmospheres.
 Out-of-plane measurements have shown that the Pt(111)-p(8x8)-R\ang{0} structure is compatible with a bi- or tri-layer structure (fig. \ref{fig:LScans80}), whereas the other peaks are more linked to monolayers (fig. \ref{fig:LScans80} - app. \ref{fig:LScans05}).
-The complete understanding of the out-of-plane structures will be the subject of additionnal work.
-A precursor relation was hypothetised between the Pt(111)-p(6x6)-R\ang{\pm 8.8} structures and Pt(111)-p(8x8)-R\ang{0} by time-resolved diffraction studies, under a lowered oxygen atmosphere (fig. \ref{fig:HexBraggPeaks}).
+The complete understanding of the out-of-plane structures will be the subject of additional work.
+A precursor relation was hypothesised between the Pt(111)-p(6x6)-R\ang{\pm 8.8} structures and Pt(111)-p(8x8)-R\ang{0} by time-resolved diffraction studies, under a lowered oxygen atmosphere (fig. \ref{fig:HexBraggPeaks}).
 The importance of the partial pressure of oxygen in the growth kinetics are have also been highlighted.
 
 % oxides Pt(100)
 On Pt(100), a bulk \ce{Pt_3O_4} oxide was identified during exposure to \qty{80}{\milli\bar} of oxygen (fig. \ref{fig:MapsPt100A} - b, fig. \ref{fig:FitPt100LScans}), but not under \qty{5}{\milli\bar} (fig. \ref{fig:MapsPt100D}), which shows the importance of the total pressure on the growth of \ce{Pt_3O_4}.
 \ce{Pt_3O_4} follows a Pt(100)-p(2x2)-R\ang{0} arrangement on the Pt(100) surface (app. \ref{fig:Pt3O4onPt100}).
-A second family of peaks was measured under high oxygen pressure (fig. \ref{fig:MapsPt100A} - b), slighty shifted in H or K with respect to the \ce{Pt_3O_4} peaks measured at $L=0$.
-The shift was determined to depend on the elapsed time under oxygen atmopshere, two values were measured, $\delta_{H,K}=0.07$ and $\delta_{H,K}=0.09$, respectively after \qty{3}{\hour} (fig. \ref{fig:MapsPt100A} - b) and \qty{1}{\hour} (fig. \ref{fig:MapsPt100B} - b) of measurement.
+A second family of peaks was measured under high oxygen pressure (fig. \ref{fig:MapsPt100A} - b), slightly shifted in H or K with respect to the \ce{Pt_3O_4} peaks measured at $L=0$.
+The shift was determined to depend on the elapsed time under oxygen atmosphere, two values were measured, $\delta_{H,K}=0.07$ and $\delta_{H,K}=0.09$, respectively after \qty{3}{\hour} (fig. \ref{fig:MapsPt100A} - b) and \qty{1}{\hour} (fig. \ref{fig:MapsPt100B} - b) of measurement.
 No clear unit cell could be associated to the shifted peaks, the related out-of-plane signal is compatible with the existence of a monolayer on the Pt(100) surface (fig. \ref{fig:LScansHighOxygenPt100}).
 Transient structures were observed at low oxygen pressures, which disappeared in the second measurement after \qty{5}{\hour} of elapsed time (fig. \ref{fig:MapsPt100D}).
 
@@ -31,15 +31,15 @@ The influence of bulk \ce{Pt_3O_4} grown on Pt(100) under high oxygen atmosphere
 % XPS
 The XPS experiment was conducted at similar oxygen to ammonia ratio, but with a decreased total pressure.
 The highest oxygen pressure reached during the XPS experiment is \qty{8.8}{\milli\bar}, in the same order of magnitude as the low oxygen pressure condition for SXRD (\qty{5}{\milli\bar}).
-Adsorbed oxygen and hydroxyl groups were indentified by XPS on both surfaces (fig. \ref{fig:O1sN1sPt111}, \ref{fig:O1sN1sPt100}) during this condition, as well as under reduced oxygen pressure (\qty{0.55}{\milli\bar}).
+Adsorbed oxygen and hydroxyl groups were identified by XPS on both surfaces (fig. \ref{fig:O1sN1sPt111}, \ref{fig:O1sN1sPt100}) during this condition, as well as under reduced oxygen pressure (\qty{0.55}{\milli\bar}).
 The duration of the high oxygen condition of Pt(111) was not long enough to enable the growth of the Pt(111)-(8x8)-R\ang{0} structure if dynamics at \qty{8.8}{\milli\bar} can be translated to \qty{5}{\milli\bar} (\qty{23}{\hour} vs. \qty{5}{\hour}).
-Therefore, only the Pt(111)-(6x6)-R\ang{0} structure is expected to yield an additionnal peak in the O 1s and Pt 4f levels, additionnal peaks of low intensity were effectively identified in the Pt 4f level (fig. \ref{fig:Pt4fPt111}).
+Therefore, only the Pt(111)-(6x6)-R\ang{0} structure is expected to yield an additional peak in the O 1s and Pt 4f levels, additional peaks of low intensity were effectively identified in the Pt 4f level (fig. \ref{fig:Pt4fPt111}).
 Interestingly, a third peak between \ce{OH_a} and \ce{O_a} was identified for Pt(100), which could be linked to the presence of the transient structures measured with SXRD under \qty{5}{\milli\bar} of oxygen (fig. \ref{fig:MapsPt100D}).
 A large peak was also measured in the Pt 4f level at \qty{71.8}{\eV} (fig. \ref{fig:Pt4fPt100}).
 
 %%%%%%%%%%%%%%%%%%%% o2/nh3=8 %%%%%%%%%%%%%%%%%%%%
 % Pt(111)
-None of the aforementionned structures were measured under reacting conditions on Pt(111), for both \ce{O_2}/\ce{NH_3} ratios (\num{8} and \num{0.5}, fig. \ref{fig:MapsPt111B} - a \& b), which underlines that platinum oxides are not stable during the catalytic oxidation of ammonia on Pt(111) under the current conditions.
+None of the aforementioned structures were measured under reacting conditions on Pt(111), for both \ce{O_2}/\ce{NH_3} ratios (\num{8} and \num{0.5}, fig. \ref{fig:MapsPt111B} - a \& b), which underlines that platinum oxides are not stable during the catalytic oxidation of ammonia on Pt(111) under the current conditions.
 Adsorbed nitrogen species (\ce{N_a}, \ce{NH_x}) were observed in the Pt4f (fig. \ref{fig:Pt4fPt111}) and N 1s (fig. \ref{fig:O1sN1sPt111}) levels, but without related surface reconstructions observable by SXRD on Pt(111) (fig. \ref{fig:MapsPt111B} - c).
 Only adsorbed water was measured during the oxidation of ammonia in the O 1s level.
 
@@ -50,15 +50,15 @@ Both \ce{Pt_3O_4} and shifted signals could again be measured during a second ex
 
 The following introduction of ammonia was seen to induce signals compatible with Pt(100)-p(10x10)-R\ang{0} surface reconstructions on the Pt(100) surface unit cell direction (fig. \ref{fig:MapsAndLScansPt100HighOxAmmonia} - a).
 Some periodicity can be observed in the related out-of-plane signals at [H, K] = [0, -1.2] and [H, K] = [0.5, -1], high intensity peaks are observed at $L=1$ and $L=2$ for the measurement at [H, K] = [1.9, 0], which can link the Pt(100)-p(10x10)-R\ang{0} surface reconstructions with the presence of 3D structures.
-Additionnal in-plane signals are observed in fig. \ref{fig:MapsAndLScansPt100HighOxAmmonia} (a), shifted by the same amount $\delta_{H, K}=0.09$ as the signals present under high oxygen atmosphere (fig. \ref{fig:MapsPt100B} - b).
+Additional in-plane signals are observed in fig. \ref{fig:MapsAndLScansPt100HighOxAmmonia} (a), shifted by the same amount $\delta_{H, K}=0.09$ as the signals present under high oxygen atmosphere (fig. \ref{fig:MapsPt100B} - b).
 The intensity of this signal as a function of $L$ was measured at [H, K] = [0.5, -0.91], decreasing with $L$, and thus showing no out-of-plane periodicity.
 
-Lowering the \ce{O_2}/\ce{NH_3} ratio to \num{0.5} has induced the removal of the Pt(100)-p(10x10)-R\ang{0} surface reconstructions and the apperance of Pt(100)-p(33x25)-R\ang{0} hexagonal surface reconstruction, with an out-of-plane signal consistent with that of monolayers (fig. \ref{fig:MapsAndLScansPt100LowOxAmmonia}).
+Lowering the \ce{O_2}/\ce{NH_3} ratio to \num{0.5} has induced the removal of the Pt(100)-p(10x10)-R\ang{0} surface reconstructions and the appearance of Pt(100)-p(33x25)-R\ang{0} hexagonal surface reconstruction, with an out-of-plane signal consistent with that of monolayers (fig. \ref{fig:MapsAndLScansPt100LowOxAmmonia}).
 Removing oxygen from the reactor resulted in the progressive removal of the hexagonal reconstruction (fig. \ref{fig:MapsPt100C}), clearly linked to the simultaneous presence of both reagents.
 
 Another key difference with Pt(111) is reported in the XPS spectra for Pt(100), with the presence of oxygen species in the O 1s level during reacting condition when the \ce{O_2}/\ce{NH_3} ratio is equal to \num{8} (fig. \ref{fig:O1sN1sPt100}), but not when this ratio is reduced to \num{0.5} by lowering the oxygen pressure.
 No adsorbed nitrogen specie was identified when the \ce{O_2}/\ce{NH_3} ratio is equal to \num{8} in the N 1s level  (fig. \ref{fig:O1sN1sPt100}).
-Therefore, the Pt(100)-p(10x10)-R\ang{0} surface reconstruction can be linked to the presence of ordered oxygen on the Pt(100) surface, which is only permitted by the simultaneous presence of ammonia, \textit{i.e.} linked to the reaction mechanim.
+Therefore, the Pt(100)-p(10x10)-R\ang{0} surface reconstruction can be linked to the presence of ordered oxygen on the Pt(100) surface, which is only permitted by the simultaneous presence of ammonia, \textit{i.e.} linked to the reaction mechanism.
 Additionally, the selectivity towards \ce{NO} in comparison with \ce{N_2} is much more important than for Pt(111) (fig. \ref{fig:RGA450Pt111AndPt100}), which highlights the importance of oxygen adsorbed on the catalyst surface to facilitate the production of \ce{NO}.
 
 \begin{figure}[!htb]
@@ -67,13 +67,13 @@ Additionally, the selectivity towards \ce{NO} in comparison with \ce{N_2} is muc
     \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/B07_2022_04_XPS/Figures/product_comparison_single_crystals.pdf}
     \caption{
         Evolution of reaction product partial pressures during the SXRD (top) and XPS (bottom) experiment on the Pt(111) and Pt(100) single crystals at \qty{450}{\degreeCelsius}.
-        Mean partial pressures during \qty{1}{\minute} at the end of each condition, recorded from a leak in the reactor output by a residual gas analyser (RGA) as detailed in sec. \ref{sec:XCAT}.
+        Mean partial pressures during \qty{1}{\minute} at the end of each condition, recorded from a leak in the reactor output by a residual gas analyser (RGA).
         The partial pressures have been normalised by the partial pressure of nitrogen.
     }
     \label{fig:RGA450Pt111AndPt100}
 \end{figure}
 
-This difference in selectivity is not observed during the SXRD experiments, this can be related to the position of the gas outlet far away from the sample (fig. \ref{fig:SampleHolder}), in comparison with the XPS experiment where the analyser nose is situated a few milimeters away from the sample surface (fig. \ref{fig:SampleSXRD} - c).
+This difference in selectivity is not observed during the SXRD experiments, this can be related to the position of the gas outlet far away from the sample (fig. \ref{fig:SampleHolder}), in comparison with the XPS experiment where the analyser nose is situated a few millimetres away from the sample surface (fig. \ref{fig:SampleSXRD} - c).
 The contribution of the sample edges (fig. \ref{fig:SampleSXRD} - b), as well as the presence of steps on the single crystal surface may lower the specific contribution of the sample surface.
 % also total pressure?
 
@@ -81,7 +81,7 @@ The contribution of the sample edges (fig. \ref{fig:SampleSXRD} - b), as well as
 The persisting presence of oxygen on the Pt(100) surface can also be linked to the different evolution of the two catalysts surface roughness.
 The roughness on the Pt(111) surface decreases during ammonia oxidation (fig. \ref{fig:CTRFit111} - a), consistent with the removal of surface oxides following the introduction of ammonia.
 Indeed, low roughness is already achieved when the \ce{O_2}/\ce{NH_3} ratio is equal to \num{0.5} (fig. \ref{fig:CTRFit111} - a).
-For Pt(100), reacting conditions can also be associated to a decreasing roughness following pure oxygen atmopshere (fig. \ref{fig:CTRFit100} - a).
+For Pt(100), reacting conditions can also be associated to a decreasing roughness following pure oxygen atmosphere (fig. \ref{fig:CTRFit100} - a).
 However, the minimal roughness is only reached once oxygen is completely removed from the reactor, \textit{i.e.} after the oxidation cycle.
 The surface reconstructions present on the Pt(100) surface during reacting conditions can be linked to the remaining high roughness (fig. \ref{fig:MapsAndLScansPt100HighOxAmmonia} - a, \ref{fig:MapsAndLScansPt100LowOxAmmonia} - a), whereas Pt(111) exhibits a bulk terminated surface (fig. \ref{fig:MapsPt111B} - a \& b).
 
@@ -94,7 +94,7 @@ For Pt(100), both reacting conditions show a strain state similar to the initial
 
 Stopping the oxidation reaction by removing oxygen has finally resulted in the removal of surface reconstructions on the Pt(100) surface (fig. \ref{fig:MapsPt100C} - a).
 If the oxygen pressure is seen to decrease directly after the change of condition in the RGA signal (fig. \ref{fig:RGA450Pt100Cycle}), the hexagonal reconstruction are still measured in the first half of the in-plane reciprocal space map, \textit{i.e.} during the first hours of measurement.
-It is possible that this progressive removal of the hexagonal surface reconstruction is due to a slow transition between adsorbed nitrogen (\ce{N_a}) measured during the reaction, and adsorbed de-hydrogenated species observed only in the abscence of oxygen (fig. \ref{fig:O1sN1sPt100} \& \ref{fig:Pt4fPt100}).
+It is possible that this progressive removal of the hexagonal surface reconstruction is due to a slow transition between adsorbed nitrogen (\ce{N_a}) measured during the reaction, and adsorbed de-hydrogenated species observed only in the absence of oxygen (fig. \ref{fig:O1sN1sPt100} \& \ref{fig:Pt4fPt100}).
 The largest transition in terms of surface strain is also during this change of condition for Pt(100), as the topmost layer goes from important compressive strain to almost bulk atomic positions for the Pt atoms (fig. \ref{fig:CTRFit100} - b).
 Atomic nitrogen is also observed in the N 1s level of Pt(111) (fig. \ref{fig:O1sN1sPt111}), but together with other nitrogen species (fig. \ref{fig:O1sN1sPt111} - \ref{fig:Pt4fPt111}), possibly impinging on its long-range ordering.
 No important change is measured in strain while removing oxygen on Pt(111) (fig. \ref{fig:CTRFit111} - b), supporting the link between surface reconstruction and out-of-plane strain.
@@ -116,3 +116,5 @@ Nevertheless, it is possible that the reconstruction is due to the interaction o
 Reducing the oxygen to ammonia ratio is linked to the reconstruction removal, the stopping of \ce{NO} production, as well as the removal of the adsorbed oxygen peak in the O 1s level.
 
 It is of key importance to understand the role of platinum oxides in the ammonia oxidation to push the selectivity towards nitrogen oxide at relevant pressure and temperature conditions.
+
+% mention pt rh study
