--- a/Sections/4_Results_SingleCrystals/Introduction.tex
+++ b/Sections/4_Results_SingleCrystals/Introduction.tex
@@ -5,36 +5,36 @@ Past ammonia oxidation experiments on \ce{Pt_{25}Rh_{75}} (100) \parencite{Resta
 The experiment focused on measuring the catalyst selectivity above the light off temperature (at \qty{175}{\degreeCelsius} and \qty{375}{\degreeCelsius}).
 It was found that the transition from a nitrogen-rich to oxygen-rich input mixture coincides with a relaxation change in the topmost metallic layer: moving from outward to inward.
 
-Thanks to near-ambient pressure x-ray photoelectron spectroscopy (NAP-XPS) experiments, nitrogen rich species (such as \ce{N_2}) were associated to out-of-plane expansion of the topmost layer; while oxidative species (such as NO and oxygen) were linked to out-of-plane contraction.
-This change in relaxation has an impact on the band structure and therefore on the catalytic properties as proposed in the d-band model detailed in sec. \ref{sec:Catalysis}.
-Therefore, our intention is to investigate whether this modification in relaxation is specific to the Pt-Rh alloy or if it holds a broader applicability to the constituent elements of the alloy, such as Pt
-Different relaxation states, transient structures, and surface moieties are expected to exist as a function of the ammonia to oxygen ratio.
+Thanks to near-ambient pressure x-ray photoelectron spectroscopy (NAP-XPS) experiments, nitrogen rich species (such as \ce{N_2}) were associated to out-of-plane expansion of the topmost layer; while oxidative species (such as \ce{NO} and atomic oxygen) were linked to out-of-plane contraction.
+This change in relaxation has an impact on the band structure, and therefore on the catalytic properties as proposed in the d-band model \parencite{Mavrikakis1998}.
+Therefore, our intention is to investigate whether this modification in relaxation is specific to the Pt-Rh alloy, or if it holds a broader applicability to the constituent elements of the alloy, such as different relaxation states, transient structures, and surface moieties are expected to exist as a function of the ammonia to oxygen ratio.
 
 The previous chapter has highlighted our results on Pt nanoparticles during ammonia oxidation.
 The average shape of multi-faceted Pt nanoparticles was measured at the SixS beamline under the reaction using surface x-ray diffraction.
-A global reshaping of the nanoparticles at \qty{600}{\degreeCelsius} under reacting conditions was put under evidence, favouring \{111\} and \{100\} facets over \{110\} and \{113\} facets.
-This could be the signature of surface oxides playing an important role in the reaction, predicted to be stable on the \{111\} and \{100\} facets by Seriani et al. \parencite*{Seriani2008}.
-The evolution of two single nanoparticles exhibiting different types of facets on their surfaces was probed with Bragg coherent diffraction imaging, highlighting the importance of the particle shape and surface area of the different crystallographic facets on its behaviour during the ammonia oxidation cycle (sec. \ref{sec:BCDIAmmoniaOxidation}).
+A global reshaping of the nanoparticles at \qty{600}{\degreeCelsius} and under reacting conditions was put under evidence, favouring \{111\} and \{100\} facets over \{110\} and \{113\} facets.
+This could be the signature of surface oxides playing an important role in the reaction, predicted to be the most stable on the \{111\} and \{100\} facets by Seriani et al. \parencite*{Seriani2008}.
+The evolution of two single nanoparticles exhibiting different types of facets on their surfaces was also probed with Bragg coherent diffraction imaging.
+The importance of the initial particle shape and facet coverage on its structural evolution during the ammonia oxidation cycle was highlighted.
 
-To fully understand the impact of the Pt surface orientation on the catalyst selectivity, the structural evolution of two different single crystals, Pt(111) and Pt(100) will here be measured by SXRD.
-In-plane reciprocal space maps were first carried out to search for new structures and surface reconstructions induced by the reaction environment, as well as to assess the potential growth of surface and bulk oxides on the catalyst surface.
+To fully understand the impact of the Pt surface structure on the catalyst selectivity, two different single crystals, Pt(111) and Pt(100) will here be measured by SXRD.
+In-plane reciprocal space maps were first carried out to search for new structures, and surface reconstructions induced by the reaction environment, as well as to assess the potential growth of surface and bulk oxides on the catalyst surface.
 Crystal truncation rods were measured to probe surface relaxation effects, and to assert the average roughness of the catalyst surface.
 Additional $L$-scans were performed at HK coordinates of the newly discovered feature to investigate the potential corresponding 3D structures.
 Reflectivity measurements were conducted to gather further insights into the various layers existing on the catalyst surface, along with their respective roughness.
 
 % introduce xps
-Lastly, core-level XPS offers distinct signatures for moieties adsorbed on the surface during reactions. This facilitates the reinforcement of connections between structure, surface moieties, and reaction products.
-In the intent of carrying out complementary NAP-XPS experiments to extend such concept to pure components of the standard catalyst, and to link internal stresses/surface-relaxations obtained from specific crystalline structures with the chemistry on its surfaces, the same Pt(111) and Pt(100) single crystals are used for both SXRD and NAP-XPS.
+Lastly, core-level XPS offers distinct signatures for moieties adsorbed on the surface during reactions.
+To link internal surface relaxation effects obtained from specific crystalline structures with the chemistry on its surfaces, the same Pt(111) and Pt(100) single crystals are used for both SXRD and NAP-XPS.
 For each combination of temperature and ammonia to oxygen ratio, the O 1s, N 1s, and Pt 4f core levels were measured, carrying information on the surface state.
 This approach aimed to establish a connection between selectivity, surface moieties, and internal stress.
 The Fermi edge is also measured after each core level to be able to find the zero binding energy.
 
 The oxidation of ammonia on single crystals was measured at \qty{450}{\degreeCelsius}, a temperature above the catalyst light-off.
-Higher temperatures were avoided in favour of the setup life expectancy in the aggressive reaction environment and the long time required to perform all the measurements (at least \qty{12}{\hour}).
-The sample was characterised under argon before (1) and after (6) the oxidation cycle to make sure that the surface state exhibited by the catalyst is reversible.
+Higher temperatures were avoided in favour of the setup life expectancy in the aggressive reaction environment, and the long time required to perform all the measurements.
+The sample was characterised under argon before (1) and after (6) the oxidation cycle to assess the reversibility of the catalyst surface.
 To ensure that any surface relaxation effects are attributed to the simultaneous presence of ammonia and oxygen in the reactor, the sample initially underwent exposure to a high-oxygen atmosphere (2), monitoring potential surface oxide growth.
 Subsequent introduction of ammonia (3) facilitated the examination of existing surface oxides' impact on catalyst selectivity during the reaction, as well as their stability under reaction conditions.
-Two different partial pressures of oxygen were employed , alongside the same partial pressure of ammonia (3, 4), to investigate the influence of the ammonia to oxygen ratio on catalyst structure, surface species, and selectivity.
+Two different partial pressures of oxygen were employed alongside the same partial pressure of ammonia (3, 4), to investigate the influence of the \ce{O_2}/\ce{NH_3} ratio on the catalyst structure, surface species, and selectivity.
 Maintaining only ammonia in the reactor (5) enabled the separation of the effect of ammonia's presence from the combined presence of ammonia and oxygen.
 Lastly, the sample surface was exposed to a reduced pressure of oxygen, to make certain that the phenomena observed when lowering the \ce{O_2}/\ce{NH_3} ratio by reducing the oxygen pressure are effectively due to the combined presence of the reagents.
 
@@ -104,12 +104,12 @@ The use of a residual gas analyser during \textit{in-situ} and \textit{operando}
 
 \subsection{Experimental setup for SXRD experiments in the horizontal geometry}\label{sec:SXRDSetupH}
 
-The surface x-ray diffraction experiment was performed at the SixS beamline at the Synchrotron SOLEIL detailed in sec. \ref{sec:SIXS}.
+The surface x-ray diffraction experiment was performed at the SixS beamline.
 The diffractometer was used in a horizontal geometry (fig. \ref{fig:Diffractometer}), accommodating the large XCAT reactor that enables the possibility to clean the sample surface by sputtering (bombardment of argon ions) and annealing directly in the reactor chamber, without having to expose the sample to air prior to the experiment.
 Two successive sputtering and annealing cycles have been carried out before the start of the SXRD experiment.
 
 To do so, the reactor cell was brought to low pressure by respectively closing and opening the entrance and exit valves, while pumping the reactor volume.
-The volume inside the XCAT reactor was increased by \textit{opening} the chamber (fig. \ref{fig:SampleSXRD}) while the height of the sample was changed so that the ion gun situated on the side of the XCAT reactor is aligned with the sample surface.
+The volume inside the XCAT reactor (fig. \ref{fig:SampleSXRD} - a) was increased by \textit{opening} the chamber while the height of the sample was changed so that the ion gun situated on the side of the XCAT reactor is aligned with the sample surface.
 The sputtering current resulting from the impact of ions on the sample surface was measured by a circuit directly connected to the sample.
 The sample height was tuned to maximise the sputtering current and surface cleaning, the Pt surface was then cleaned by sputtering for \qty{5}{\minute} at room temperature.
 The efficiency of the sputtering could be observed directly by a quick increase of the reactor pressure in the first minutes linked to the removal of surface impurities, followed by a progressive decrease of the reactor pressure from pumping.
@@ -127,13 +127,11 @@ The orientation matrix $U$ of the crystal \parencite{Schleputz2011} was also rec
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[trim=1cm 3cm 0 0, clip, width=0.33\textwidth]{/home/david/Documents/PhD/Figures/sample/sxrd_sample.png}
-    \includegraphics[width=0.33\textwidth]{/home/david/Documents/PhD/Figures/xps_data/B07Setup.png}
+    \includegraphics[width=\textwidth]{/home/david/Documents/PhD/Figures/SampleAndSetups.pdf}
     \caption{
-        Round single crystal set on sample holder (left) the top of the crystal is [111] oriented, the surface area of the single crystal is \qty{\approx 5e7}{\um^2}, the [100] oriented sample has the same shape.
-        Large XCAT reactor opened for sputtering (middle).
-        Detailed drawing of the XPS chamber at the B07 beamline at the Diamond Synchrotron (right), taken from Held et al. \parencite*{Held2020}.
-        \textcolor{Important}{Add image of XCAT opened and closed}
+        a) Large XCAT reactor.
+        b) Round single crystal set on sample holder the top of the crystal is [111] oriented, the surface area of the single crystal is \qty{\approx 5e7}{\um^2}, the [100] oriented sample has the same shape.
+        c) Detailed drawing of the XPS chamber at the B07 beamline at the Diamond Synchrotron (right), taken from Held et al. \parencite*{Held2020}.
     }
     \label{fig:SampleSXRD}
 \end{figure}
