--- a/Sections/5_Conclusion/Conclusion.tex
+++ b/Sections/5_Conclusion/Conclusion.tex
@@ -8,7 +8,17 @@ Nevertheless, since no bulk oxide can be measured under reacting conditions,
 
 Additional measurements with first different exposition times to a pure oxygen atmosphere (while monitoring the thickness of the \ce{Pt_3O_4} layer), and secondly introducing ammonia in the reactor while comparing the product partial pressure could bring an answer to the role of \ce{Pt_3O_4} during ammonia oxidation.
 
+The main drawback of this error-metric is that each voxel is given the same weight, if this assumption is not a problem when working near the Bragg peak, $4^{th}$ generation synchrotron that possess a higher flux make it possible to sample the signal in region further away from the Bragg peak.
 A detailed study of the impact of trying to improve the image resolution by increasing the distance from the centre of the Bragg peak by combining simulations and experimental reconstructions would be of great interest to the community to understand the impact of the $(\vec{q}-\vec{G}).\vec{u}_k<<1$ approximation.
 
+Know the oxide at reacting conditions ? metastable, or depending on the path
+
+relaxation sous ammoniac, ok avec meilleure reconstruction de particule D6
+
+also mention the facet evolution probed by sxrd
 
 311 type facets
+
+in situ and operando here, very cool
+
+Mention bragg ptychography to probe several nanoparticles together
