--- a/main.tex
+++ b/main.tex
@@ -249,7 +249,7 @@
     \input{Sections/2_Theory_Models/ComputerPrograms}
 % Results BCDI
     \addtocontents{toc}{\protect\newpage}
-    \chapter{Pt nanoparticles during the oxidation of ammonia}
+    \chapter{Pt nanoparticles during ammonia oxidation}
     \input{Sections/3_Results_Nanoparticles/Introduction}
     \input{Sections/3_Results_Nanoparticles/SXRDNanoparticles}
     \input{Sections/3_Results_Nanoparticles/BCDITempRamp}
@@ -257,7 +257,7 @@
     \input{Sections/3_Results_Nanoparticles/Conclusion}
 
 % Results SXRD
-    \chapter{Pt single crystals during the oxidation of ammonia}
+    \chapter{Pt single crystals during ammonia oxidation}
     \input{Sections/4_Results_SingleCrystals/Introduction}
     \input{Sections/4_Results_SingleCrystals/111}
     \input{Sections/4_Results_SingleCrystals/100}
