--- a/references.bib
+++ b/references.bib
@@ -13,6 +13,21 @@ volume = {90},
 year = {2002}
 }
 
+@Article{Altantzis2019,
+author={Altantzis, Thomas and Lobato, Ivan and De Backer, Annick and B{\'e}ch{\'e}, Armand and Zhang, Yang and Basak, Shibabrata and Porcu, Mauro and Xu, Qiang and S{\'a}nchez-Iglesias, Ana and Liz-Marz{\'a}n, Luis M. and Van Tendeloo, Gustaaf and Van Aert, Sandra and Bals, Sara},
+title={Three-Dimensional Quantification of the Facet Evolution of Pt Nanoparticles in a Variable Gaseous Environment},
+journal={Nano Letters},
+year={2019},
+month={Jan},
+day={09},
+publisher={American Chemical Society},
+volume={19},
+number={1},
+pages={477-481},
+issn={1530-6984},
+doi={10.1021/acs.nanolett.8b04303},
+}
+
 @incollection{Unertl1996,
 title = {Chapter 1 - Surface Crystallography},
 editor = {W.N. Unertl},
@@ -1093,7 +1108,6 @@ day={11},
 publisher={American Chemical Society},
 volume={1396},
 pages={1-17},
-note={0},
 isbn={9780841298125},
 doi={10.1021/bk-2021-1396.ch001},
 }
@@ -1167,16 +1181,22 @@ author = {Edvard Bergene and Olav Tronstad and Anders Holmen},
 abstract = {The changes in structure and surface composition of new and used Pt–Rh catalyst gauzes have been studied by gas adsorption methods. The total surface area was measured by physical adsorption of Kr (Kr-BET). The surface area of used samples varied between 0.01 and 0.06 m2/g representing an increase in surface area of 2 to 20 times compared with the surface area of new catalysts. A gauze with RH$_2$O$_3$whiskers exhibited the largest increase in surface area. Except for this abnormal sample, the top gauze in the catalyst pack exhibited the largest surface area. The active surface area of the Pt–Rh gauze catalysts was measured by H2-titration/adsorption. It was assumed that Pt represents the active part of the catalyst. When exposing a spent gauze to H2at 298 K, only platinum oxide on the catalyst surface was titrated. During operation the catalyst deactivates partly by the formation of RH$_2$O$_3$, which was found to be inert against H2at 298 K. However, reduction of used catalyst gauze in H2at 623 K and reoxidation at 623 K made all the RH$_2$O$_3$reactive toward H2at 298 K, indicating the presence of two forms of RH$_2$O$_3$. It was observed that only the first gauze in a gauze pack from a NH$_3$-oxidation reactor comprised a noteworthy active area. All the other gauzes investigated were more or less blocked by RH$_2$O$_3$.}
 }
 
-@Patent{Kaiser1909,
- author = {Kaiser, K},
- number = {Patent, 271517},
- year={1909},
+@Patent{Ostwald1902,
+ author = {Ostwald, W},
+ number = {GB190200698A},
+ year={1903},
 }
 
-@Patent{Ostwald1908,
+@Patent{Ostwald1903,
+ author = {Ostwald, W},
+ number = {GB190208300A},
+ year={1902},
+}
+
+@Patent{Kaiser1909,
  author = {Kaiser, K},
- number = {Patent, 0807909},
- year={1908},
+ number = {271517},
+ year={1909},
 }
 
 @article{Borg1994,
@@ -1402,7 +1422,7 @@ year = {2000}
 
 @article{Offermans2006,
 abstract = {By means of density functional theory calculations we have investigated the role of adsorbed atomic oxygen and adsorbed OH in the oxidation of ammonia on Pt{1 1 1}. We have investigated the dissociation of NH$_3$,ads, NH2,ads and NHads on Pt{1 1 1} and the oxidation of these species by Oads and OHads. We have done normal mode frequency analysis and work function calculations to characterise reactant, product and transition states. We have determined reaction energies, activation entropies, kinetic parameters and corrected total energies with the zero point energy. We have shown that Oads only activates the dehydrogenation of NH$_3$,ads and that OHads activates the dehydrogenation of all NHx,ads species and have reasoned this difference in activation by a bond order conservation principle. We have pointed out the importance of a zero point energy correction to the reaction energies and barriers. We have compared the calculated vibrational modes of the adsorbates with corresponding experimental EELS data. This has led to a revise of the frequency assignment of $\nu$(Pt-OH2), a revise in the identification of a NH2 species on the Pt{1 1 1} surface after electron bombardment of pre-adsorbed NH$_3$ and the confirmation of an ammonia dimer binding model at the expense of a hollow site occupation by ammonia on the Pt{1 1 1} surface. {\textcopyright} 2006 Elsevier B.V. All rights reserved.},
-author = {Offermans, W. K. and Jansen, A. P.J. and van Santen, R. A.},
+author = {Offermans, W. K. and Jansen, A. P. J. and {van Santen}, R. A.},
 doi = {10.1016/j.susc.2006.01.031},
 issn = {00396028},
 journal = {Surface Science},
@@ -1416,7 +1436,7 @@ year = {2006}
 
 @article{Offermans2007,
 abstract = {Density functional theory (DFT) calculations are performed to compare the dissociation of NHx (x = 1-3) species on the Pt{100}, Pt{111}, and Pt{211} surface. Pt{211} is a stepped surface, and Pt{100} consists of square arranged surface atoms. Both surfaces are less compact than Pt{111}. The question is addressed whether the Pt{100} and the Pt{211} surface promote the dissociation of NHx species by lowering the activation barriers with respect to Pt{111}. The NH dissociation reaction is promoted on Pt{100} but not on Pt{211}. The NH2 dissociation reaction is neither promoted by Pt{100} nor Pt{211}. The dissociation of NH$_3$ is also not promoted and turns out to be a two-step reaction on the platinum surfaces. Atop-bonded NH2 is intermediate and equally stable on the three surfaces. The nature of the transition states, which is late in the formation and early in the rearrangement of this atop-bonded NH2, makes the barriers almost independent of the surface topology. Because the reaction energies of the NHx dissociation reactions do depend on the surface topology the findings are unexpected, but they are consistent with an experimentally found moderate structure sensitivity of the ammonia decomposition on platinum. {\textcopyright} 2007 American Chemical Society.},
-author = {Offermans, W. K. and Jansen, A. P.J. and {Van Santen}, R. A. and Novell-Leruth, G. and Ricart, J. M. and P{\'{e}}rez-Ram{\'{i}}rez, J.},
+author = {Offermans, W. K. and Jansen, A. P. J. and {Van Santen}, R. A. and Novell-Leruth, G. and Ricart, J. M. and P{\'{e}}rez-Ram{\'{i}}rez, J.},
 doi = {10.1021/jp073083f},
 issn = {19327447},
 journal = {Journal of Physical Chemistry C},
@@ -1762,7 +1782,7 @@ year = {2003}
 }
 
 @online{Diadem,
-  author = {Agence Nationale de la Recherche},
+  author = {{Agence Nationale de la Recherche}},
   title = {Dispositifs Intégrés pour l’Accélération du DEploiement de Matériaux Emergents},
   year = 2023,
   url = {https://anr.fr/fr/france-2030/france2030/call/pepr-diadem-appel-a-projets-dispositifs-integres-pour-lacceleration-du-deploiement-de-materiaux/},
@@ -1875,7 +1895,6 @@ volume = {70},
 number = {1},
 pages = {111-118},
 year = {2007},
-note = {Papers presented at the 4th International Conference on Environmental Catalysis (4th ICEC)Heidelberg, Germany, June 05 – 08, 2005.},
 issn = {0926-3373},
 doi = {https://doi.org/10.1016/j.apcatb.2005.11.037},
 author = {Vita A. Kondratenko and Manfred Baerns},
@@ -3409,9 +3428,37 @@ volume = {7},
 year = {2017}
 }
 
+@article{Yau2017,
+author = {Allison Yau and Wonsuk Cha and Matthew W. Kanan and G. Brian Stephenson and Andrew Ulvestad },
+title = {Bragg coherent diffractive imaging of single-grain defect dynamics in polycrystalline films},
+journal = {Science},
+volume = {356},
+number = {6339},
+pages = {739-742},
+year = {2017},
+doi = {10.1126/science.aam6168},
+URL = {https://www.science.org/doi/abs/10.1126/science.aam6168},
+eprint = {https://www.science.org/doi/pdf/10.1126/science.aam6168},
+abstract = {The response of materials to external conditions depends on small-scale features such as defects and grain boundaries. Yau et al. heated gold thin films and used coherent x-ray diffractive imaging to track how these microstructures developed during grain growth (see the Perspective by Suter). The technique allowed nondestructive visualization of the features in three dimensions. The method should help link external stimuli to material response through changes in microstructure, thereby allowing development of novel materials through microstructural engineering. Science, this issue p. 739; see also p. 704 Bragg coherent diffractive imaging can track defects and grain boundaries during heating in a gold thin film. Polycrystalline material properties depend on the distribution and interactions of their crystalline grains. In particular, grain boundaries and defects are crucial in determining their response to external stimuli. A long-standing challenge is thus to observe individual grains, defects, and strain dynamics inside functional materials. Here we report a technique capable of revealing grain heterogeneity, including strain fields and individual dislocations, that can be used under operando conditions in reactive environments: grain Bragg coherent diffractive imaging (gBCDI). Using a polycrystalline gold thin film subjected to heating, we show how gBCDI resolves grain boundary and dislocation dynamics in individual grains in three-dimensional detail with 10-nanometer spatial and subangstrom displacement field resolution. These results pave the way for understanding polycrystalline material response under external stimuli and, ideally, engineering particular functions.}
+}
+
+@Article{Yau2017a,
+author={Yau, Allison and Harder, Ross J. and Kanan, Matthew W. and Ulvestad, Andrew},
+title={Imaging the Hydrogen Absorption Dynamics of Individual Grains in Polycrystalline Palladium Thin Films in 3D},
+journal={ACS Nano},
+year={2017},
+month={Nov},
+day={28},
+publisher={American Chemical Society},
+volume={11},
+number={11},
+pages={10945-10954},
+issn={1936-0851},
+doi={10.1021/acsnano.7b04735},
+}
+
 @article{Ulvestad2017a,
-author={Ulvestad, A.
-and Yau, A.},
+author={Ulvestad, A. and Yau, A.},
 title={The self-healing of defects induced by the hydriding phase transformation in palladium nanoparticles},
 journal={Nature Communications},
 year={2017},
@@ -4533,6 +4580,36 @@ issn={0009-2665},
 doi={10.1021/cr9001808},
 }
 
+@Article{Ndolomingo2020,
+author={Ndolomingo, Matumuene Joe and Bingwa, Ndzondelelo and Meijboom, Reinout},
+title={Review of supported metal nanoparticles: synthesis methodologies, advantages and application as catalysts},
+journal={Journal of Materials Science},
+year={2020},
+month={May},
+day={01},
+volume={55},
+number={15},
+pages={6195-6241},
+abstract={Supported metal nanoparticles, M-NPs, are of great scientific and economic interest as they encompass application in chemical manufacturing, oil refining and environmental catalysis. Oxidation and hydrogenation reactions are among the major reactions catalyzed by supported M-NPs. Although supported M-NPs are preferable due to their easy recovery and reuse, there are still some practical issues regarding their catalytic activity and deactivation. This review highlights the general features of supported M-NPs as catalysts with particular attention to copper, gold, platinum, palladium, ruthenium, silver, cobalt and nickel and their catalytic evaluation in various reactions. The catalytic performance of noble M-NPs has been explored extensively in various selective oxidation and hydrogenation reactions. In general, noble metals are expensive and sensitive to poisons. Despite their significant merits and potential (easily available, comparatively inexpensive and less sensitive to poisons), catalysis by base M-NPs is relatively less explored. Therefore, activity of base M-NPs can be improved, and still, there is potential for such catalysts.},
+issn={1573-4803},
+doi={10.1007/s10853-020-04415-x},
+}
+
+@Article{Astruc2020,
+author={Astruc, Didier},
+title={Introduction: Nanoparticles in Catalysis},
+journal={Chemical Reviews},
+year={2020},
+month={Jan},
+day={22},
+publisher={American Chemical Society},
+volume={120},
+number={2},
+pages={461-463},
+issn={0009-2665},
+doi={10.1021/acs.chemrev.8b00696},
+}
+
 @article{Astruc2005,
 author = {Astruc, D. and Lu, F. and Aranzaes, J. R.},
 title = {Nanoparticles as Recyclable Catalysts: The Frontier between Homogeneous and Heterogeneous Catalysis},
@@ -5408,7 +5485,7 @@ year = {2020}
 }
 
 @article{Kim2021,
-author = {Young Yong Kim  and Thomas F. Keller  and Tiago J. Goncalves  and Manuel Abuin  and Henning Runge  and Luca Gelisio  and Jerome Carnis  and Vedran Vonk  and Philipp N. Plessow  and Ivan A. Vartaniants  and Andreas Stierle },
+author = {Young Yong Kim and Thomas F. Keller  and Tiago J. Goncalves  and Manuel Abuin  and Henning Runge  and Luca Gelisio  and Jerome Carnis  and Vedran Vonk  and Philipp N. Plessow  and Ivan A. Vartaniants  and Andreas Stierle },
 title = {Single alloy nanoparticle x-ray imaging during a catalytic reaction},
 journal = {Science Advances},
 volume = {7},
@@ -5905,9 +5982,15 @@ volume = {9},
 year = {2012}
 }
 
-
-@article{Schmid2010, title={Dynamic mode decomposition of numerical and experimental data}, volume={656}, DOI={10.1017/S0022112010001217}, journal={Journal of Fluid Mechanics}, publisher={Cambridge University Press}, author={SCHMID, PETER J.}, year={2010}, pages={5–28}}
-
+@article{Schmid2010,
+ title={Dynamic mode decomposition of numerical and experimental data},
+ volume={656}, DOI={10.1017/S0022112010001217},
+ journal={Journal of Fluid Mechanics},
+ publisher={Cambridge University Press},
+ author={Schmid, Peter J.},
+ year={2010},
+ pages={5–28}
+}
 
 @article{FavreNicolin2020a,
    title = {Free log-likelihood as an unbiased metric for coherent diffraction imaging},
@@ -7492,7 +7575,7 @@ year = {2019}
 }
 
 @article{Avval2022,
-author = {Avval, Tahereh G and Chatterjee, Shiladitya and Hodges, Grant T and Bahr, Stephan and Dietrich, Paul and Thi{\ss}en, Andreas and Linford, Matthew R and Meyer, Michael and Avval, Tahereh G and Chatterjee, Shiladitya and Hodges, Grant T and Bahr, Stephan and Dietrich, Paul and Meyer, Michael and Thi{\ss}en, Andreas and Linford, Matthew R},
+author = {Avval, Tahereh G and Chatterjee, Shiladitya and Hodges, Grant T and Bahr, Stephan and Dietrich, Paul and Thi{\ss}en, Andreas and Linford, Matthew R and Meyer, Michael},
 doi = {10.1116/1.5100962},
 journal = {Surface Science Spectra},
 keywords = {comparison,g,nap-xps,near-ambient pressure x-ray photoelectron,o 2,oxygen,spectral category,spectroscopy,xps},
