--- a/Sections/2_Theory_Models/Introduction.tex
+++ b/Sections/2_Theory_Models/Introduction.tex
@@ -1,7 +1,8 @@
-Understanding the different mechanisms at play when photons interact with matter is of crucial importance to be able to decide how to use x-rays as a probe in material science.
-Each phenomenon is at the source of different techniques (tab. \ref{tab:techniques} - fig. \ref{fig:TechniquesDataExamples}), scattering brings surface x-ray diffraction (SXRD) and Bragg coherent diffraction imaging (BCDI), two techniques used in the frame of this thesis that yield complementary information about the sample bulk (\textit{i.e.} below the surface) and surface structure.
+Understanding the different mechanisms at play when photons interact with matter is of crucial importance to decide how to use x-rays as a probe in material science.
+Each phenomenon is at the source of different techniques (tab. \ref{tab:techniques} - fig. \ref{fig:TechniquesDataExamples}), scattering brings surface x-ray diffraction (SXRD) and Bragg coherent diffraction imaging (BCDI).
+Both techniques are used during this thesis, yielding complementary information about the sample structure.
 
-X-ray absorption together with the photoelectric effect explained by Einstein in \cite*{Einstein1905} are at the origin of the third technique used during this work, x-ray photoelectron spectroscopy, sensitive to the electronic structure of the adsorbates on the sample's surface.
+X-ray absorption together with the photoelectric effect explained by Einstein in \cite*{Einstein1905} are at the origin of the third technique used during this work, x-ray photoelectron spectroscopy, sensitive to the chemical environment of the adsorbates present on the sample's surface.
 
 \begin{table}[!htb]
 \centering
@@ -28,19 +29,19 @@ X-ray absorption together with the photoelectric effect explained by Einstein in
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[height=0.25\textwidth]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/gwaihir/dp_pr.png}
-    \includegraphics[height=0.25\textwidth]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/sxrd_data/Pt100/maps/Map_hkl_surf_or_2227-2283_not_patched.png}
-    \includegraphics[height=0.25\textwidth]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/xps_data/transition_xps.png}
+    \includegraphics[height=0.28\textwidth]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/gwaihir/dp_pr.png}
+    \includegraphics[height=0.28\textwidth]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/sxrd_data/Pt100/maps/Map_hkl_surf_or_2227-2283_not_patched.png}
+    \includegraphics[height=0.28\textwidth]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/xps_data/transition_xps.png}
     \caption{
-    Slice of 3D diffraction pattern collected at the SixS beamline at the SOLEIL synchrotron using BCDI (left).
-    Reciprocal space in-plane map collected at the SixS beamline using SXRD (middle).
-    Ambient pressure XPS spectra measured during a transition between two atmospheres (\argon  and \dioxygen), collected at the B07 beamline at the Diamond synchrotron using XPS (right).}
+    2D diffraction pattern collected using BCDI (left), and reciprocal space in-plane map collected using SXRD (middle) at the SixS beamline (SOLEIL synchrotron).
+    Ambient pressure XPS spectra measured during a transition between two atmospheres (\argon  and \dioxygen), collected using XPS (right) at the B07 beamline (Diamond synchrotron).
+    }
     \label{fig:TechniquesDataExamples}
 \end{figure}
 
-In this chapter, heterogeneous catalysis, as well as the main reaction mechanisms during which it occurs will be discussed,
-The concept of active sites will be introduced together with the link between adsorption and surface strain, crucial for the study of catalytic reaction with x-ray diffraction techniques that are intrinsically sensitive to lattice strain in crystals.
+This chapter will discuss heterogeneous catalysis, focusing on its key principles and the associated primary reaction mechanisms.
+The concept of active sites will be introduced together with the link between adsorption and surface strain, crucial for the study of catalytic reaction with x-ray diffraction techniques, intrinsically sensitive to lattice strain in crystals.
 The origin of each technique from fundamentals that not only tailor their experimental design but also the information one can gain from their use will be detailed (tab \ref{tab:techniques}).
 
-Finally, the importance of open-source, user-friendly, comprehensive, and detailed computer programs will be addressed with \text{Gwaihir}, a \textit{Python} software developed during this thesis not only to bring new users to BCDI, but also to facilitate the data analysis workflow.
+Finally, the importance of open-source, user-friendly, comprehensive, and detailed computer programs will be addressed with the example of \text{Gwaihir}, a \textit{Python} software developed during this thesis not only to bring new users to BCDI, but also to facilitate the data analysis workflow.
 A brief description of the other softwares used during this thesis will also be given.
