--- a/Sections/3_Results_Nanoparticles/Introduction.tex
+++ b/Sections/3_Results_Nanoparticles/Introduction.tex
@@ -1,59 +1,57 @@
 \section{Introduction}
 
 % Reaction
-During the catalytic oxidation of ammonia, if Pt catalysts were first used when aiming at the production of \ce{NO}, Pt-Rh catalysts have then proven to be more effective since the 1920s when Rhodium was added to the catalyst \parencite{Handforth1934, Heck1982}.
-Recently, the ammonia oxidation reaction over a \ce{Pt_{25}Rh_{75}}(001) single crystal was studied with a surface science approach by operando techniques such as near-ambient pressure X-ray photoemission spectroscopy (NAP-XPS) and surface x-ray diffraction (SXRD) combined with mass spectrometry \parencite{Resta2020a}.
-It was shown that \ce{NO} production coincides with significant changes of the surface structure and the formation of a \ce{RhO_2} surface oxide.
-Moreover, changes in the surface relaxation related to the catalyst selectivity as well as to the presence of an hysteresis cycle in the reaction were reported.
+During the catalytic oxidation of ammonia, Pt catalysts were first used when aiming at the production of nitrogen oxide for the Ostwald process, Pt-Rh catalysts have then proven to be more effective since the 1920s \parencite{Handforth1934, Heck1982}.
+Recently, the ammonia oxidation reaction over a \ce{Pt_{25}Rh_{75}}(001) single crystal was studied with a surface science approach, by combining operando techniques such as near-ambient pressure X-ray photoemission spectroscopy (NAP-XPS) and surface x-ray diffraction (SXRD) with mass spectrometry \parencite{Resta2020a}.
+It was shown that \ce{NO} production coincides with significant changes of the surface structure, and the formation of a \ce{RhO_2} surface oxide.
+Moreover, changes in the surface relaxation related to the catalyst selectivity were reported.
 
 % Single crystal ok but
-Using single crystals as models to understand \textit{in-situ} and \textit{operando} the structure-activity relationship offers some perks such as a large surface area which increases the surface signal (lowering the pressure gap with some techniques such as XPS), and the possibility to isolate specific facets to progressively build up the understanding of the role of the sample surface on the catalytic activity \parencite{Hejral2016, Resta2020a}.
-However, they fail when aiming at closing the material gap since they only exhibit a single crystallographic orientation on their surface, and are much larger (almost a \unit{cm} large) than the width of Pt-Rh gauzes used for the oxidation of ammonia (few 10s of \unit{\micro\meter} large, \cite{Kaiser1909}).
+Using single crystals as model catalysts to understand \textit{in-situ} and \textit{operando} the structure-activity relationship offers some advantages.
+For example, the large surface area increases the surface signal.
+It is also possible to isolate specific facets to progressively build up the understanding of the role of the sample surface on the catalytic activity \parencite{Hejral2016, Resta2020a}.
+However, single crystals fall short when aiming at closing the material gap since they only exhibit a single crystallographic orientation on their surface, and are much larger (almost a \unit{cm} large) than the width of Pt-Rh gauzes used for the oxidation of ammonia (few 10s of \unit{\micro\meter} large, \cite{Kaiser1909}).
 
 % use nanoparticles
-In order to push for the reduction of the material gap in heterogeneous catalysis, Pt nanoparticles have been used in this study, approaching the size of individual grains on the industrial catalysts while exhibiting many different types of facets on their surface.
-Specifically, the catalytic structure-activity relationships of Pt nanoparticles will be investigated during the oxidation of ammonia, as a stepping stone to the study of Pt-Rh nanoparticles, approaching real industrial catalysts.
-Indeed, if Pt-Rh nanoparticles have recently been successfully studied with BCDI during the oxidation of carbon monoxide \parencite{Kim2021}, the presence of compositional strain in bi-metallic catalysts makes the study of surface strain increasingly difficult \parencite{Kawaguchi2019}.
+To reduce the material gap in heterogeneous catalysis, nanoparticles can be used, approaching the size of individual grains on the industrial catalysts, and exhibiting many different types of facets on their surface.
+Therefore, the catalytic structure-activity relationships of Pt nanoparticles will be investigated during the oxidation of ammonia, as a stepping stone to the study of Pt-Rh nanoparticles.
+Pt-Rh nanoparticles have recently been successfully studied with BCDI during the \ce{CO} oxidation \parencite{Kim2021}, but the presence of compositional strain in bi-metallic catalysts makes the study of surface strain increasingly complex \parencite{Kawaguchi2019}.
 
 % sxrd
-It is first intended to measure the total signal scattered from \ce{Al_2O_3}-supported platinum particles by taking advantage of the possibility to carry out grazing-incidence diffraction measurements at the SixS beamline of synchrotron SOLEIL.
-At grazing incidences the beam footprint extends across the whole sample length, the scattered beam being then proportional to the ensemble behaviour of the nanoparticles \parencite{Nolte2008, Hejral2013, Hejral2016}.
+It is first intended to measure the signal scattered from $\alpha$-\ce{Al_2O_3} (also known as sapphire) supported platinum particles by taking advantage of the possibility to carry out grazing-incidence diffraction measurements at the SixS beamline.
+At grazing incidence, the beam footprint occupies a large ratio of the sample surface, covered by nanoparticles.
+The scattered beam is then proportional to their average behaviour \parencite{Nolte2008, Hejral2013, Hejral2016}.
 
-As seen in sec. \ref{sec:SXRD}, truncated surfaces such as facets give rise to crystal truncation rods (CTR) in the reciprocal space, whose intensity as a function of the scattering vector and width in reciprocal space are related to the facet size, roughness and strain.
-
+As seen in the previous chapter, surfaces give rise to crystal truncation rods (CTR) in the reciprocal space, the intensity of which is related to the facet size, roughness and strain.
 The average nanoparticle shape and structure will be probed by studying the intensity of crystal truncation rods in directions perpendicular to the expected facets on the nanoparticle surface.
 Prior experiments with similar samples \parencite{Dupraz2017, Li2020, Lim2021, Dupraz2022} have shown that the particles exhibit a Winterbottom shape \parencite{Winterbottom1967, Boukouvala2021}, typical of nanoparticles epitaxied on a substrate, with mainly \{111\}, \{110\}, and \{100\} facets, and a [111] orientation perpendicular to the substrate.
 
-By having the incident beam illuminating all of the particles, the CTR signal in e.g. the [111] direction will be the sum of the contribution from the [111] facet of every illuminated nanoparticle (as well as their [$\bar{1}\bar{1}\bar{1}$] facets).
+By having the incident beam illuminating multiple particles, the CTR signals in e.g. the [111] direction is the sum of the contribution from the [111] facet of every illuminated nanoparticle (as well as their [$\bar{1}\bar{1}\bar{1}$] facets).
 Therefore, phenomena inducing structural change such as particle re-faceting/reshaping at a given condition are expected to be visible by an evolution of the different CTR.
 
 % bcdi
-To obtain a more detailed picture of the phenomena at play, surface x-ray diffraction which provides ensemble-averaged properties when studying nanoparticles will be followed by the use of another technique which will bring information on the structural behaviour of single nanoparticles.
+With Bragg coherent diffraction imaging (BCDI), the individual three-dimensional (3D) structural response of \textit{isolated} nanoparticles to changes in the gas mixtures will be measured under reacting conditions.
+The same reaction conditions will be used in both experiments.
+\textit{Operando} analysis of the nanoparticles properties (size, shape, strain, re-faceting, support interaction, oxide formation, etc.) are essential to better understand their behaviour during the catalytic reaction.
 
-With Bragg coherent diffraction imaging (BCDI), the individual three-dimensional (3D) structural response of isolated nanoparticles to changes in the gas mixtures will be measured under \textit{in situ} and \textit{operando} conditions, enabling us to probe in detail the structure evolution of single facets during heterogeneous catalytic reactions (sec. \ref{sec:FacetAnalysis}).
-
-A careful in situ analysis of the properties of the nanoparticles (size, shape, strain, re-faceting, support interaction, oxide formation, etc.) in 3D during the oxidation of ammonia is of essential importance to gain more understanding of the behaviour of these nanocrystals during a catalytic reaction.
-
-However, it must first be ensured that the nanoparticles do not move or change their epitaxial relationship with the substrate during the exposition to reacting conditions at high temperatures.
-Therefore, the preceding SXRD experiment will also aim at resolving the evolution of the epitaxial relationship between the Pt nanoparticles and the \ce{Al_2O_3} substrate before measuring single nanoparticles with Bragg coherent diffraction imaging, during which the beam is reduced to micrometric size, and for which a movement of the nanoparticles prevents the measurements of rocking curves due to loss of alignment.
-Both BCDI and SXRD can be applied to high gas pressures due to the x-rays’ high penetration in gasses.
+However, it must first be ensured that the nanoparticles do not move, or change their epitaxial relationship with the substrate during the oxidation reaction.
+Indeed, in a BCDI experiment, the beam is reduced to micrometric size, and nanoparticles movements will prevent good quality measurements.
+Thus, the SXRD experiment will also aim at resolving the evolution of the epitaxial relationship between the Pt nanoparticles and the \ce{Al_2O_3} substrate.
 
 \subsection{$\alpha-$\ce{Al_2O_3} supported Pt nanoparticles synthesis}\label{sec:PtParticles}
 
-The platinum nanoparticles were synthesised thanks to a collaboration with the Israel Institute of Technology (Technion, collaboration with Dr. Eugene Rabkin), their use first showcased in the work by Dupraz et al. \parencite*{Dupraz2017}.
-A 30 nm thick homogeneous layer of platinum is deposited at room temperature on a [001] oriented alumina ($\alpha-$\ce{Al_2O_3}) substrate, which crystallises in a hexagonal unit cell.
-The Pt nanocrystals have their c-axis oriented along the [111] direction, normal to the (0001) plane of the $\alpha-$\ce{Al_2O_3} substrate.
-A mask is then applied on the sample and a lithographic process route ensures that the platinum layer transforms to nanoparticles that are between 100 and 1000 nm large, epitaxied on the substrate surface.
+The platinum nanoparticles were grown by the Israel Institute of Technology (Technion, collaboration with Dr. Eugene Rabkin).
+A first use is showcased in the work by Dupraz et al. \parencite*{Dupraz2017}.
 
-Two different samples are used during the oxidation of ammonia.
-On one hand, in order to obtain a more important scattered intensity with SXRD, the sample surface is homogeneously covered with Pt particles.
-On the other hand, there is a need to obtain isolated nanoparticles for BCDI to avoid alien signal coming from neighbouring nanoparticles.
-The application of a specific patterned mask during the lithographic process then yields a patterned sample with isolated nanoparticles in the middle of \qty{100}{\um} large squares, visible in fig. \ref{fig:Mask}.
+Two different samples are used in this thesis.
+To obtain a more important scattered intensity with SXRD, the first sample's surface is homogeneously covered with Pt particles, \qtyrange{100}{1000}{\nm} large.
+For the second sample, a mask is applied during the lithographic process route to ensure that the platinum layer transforms to isolated nanoparticles (fig. \ref{fig:Mask}), thereby avoiding alien signal coming from neighbouring nanoparticles with BCDI.
+The second sample is also called \textit{patterned} sample.
+Dewetting is obtained by annealing at \qty{1100}{\degreeCelsius} for \qty{30}{\minute}, that also guarantees a good recrystallisation of the particle.
 
-The position of the squares is designated with Arabic numbers (row), letters (column) and roman numbers (large rectangle).
+In the patterned sample, single nanoparticles in the middle of squares (fig. \ref{fig:Mask}).
+The position of the squares is designated with Arabic numbers (row), letters (column) and Roman numbers (large rectangle).
 All of the position indicators are constituted of platinum nanoparticle as well, which allows the mapping of the sample's surface in Bragg condition to find the nanoparticles' positions (fig. \ref{fig:SampleMapping}).
-The hole diameter in the mask changes in different areas of the sample and has a direct impact on the average nanoparticle size in those areas.
-After dewetting and heating at \qty{1100}{\degreeCelsius} for \qty{30}{\minute}, the platinum nanoparticles exhibit a well-faceted Winterbottom shape observed in various BCDI measurements \parencite{Dupraz2017}.
 
 \begin{figure}[!htb]
     \centering
@@ -65,24 +63,17 @@ After dewetting and heating at \qty{1100}{\degreeCelsius} for \qty{30}{\minute},
     \label{fig:Mask}
 \end{figure}
 
-The epitaxial relationship between platinum and $\alpha$-\ce{Al_2O_3} (also known as sapphire) has been shown to consist into the superposition of the Pt [111] plane on top of the $\alpha$-\ce{Al_2O_3} [0001] plane, \textit{i.e.} Pt[111]||Al$_2$O$_3$[0001] (fig. \ref{fig:Epitaxy} - \cite{Farrow1993}).
-The \{110\} platinum planes are perpendicular to the Pt(111) plane, the second-neighbour Pt atoms are arranged in a hexagonal pattern.
+The epitaxial relationship between the platinum nanoparticles and the $\alpha$-\ce{Al_2O_3} substrate has been shown to consist of Pt \{111\} planes on top of the $\alpha$-\ce{Al_2O_3} (0001) facet (fig. \ref{fig:Epitaxy} - \cite{Farrow1993}).
+This arrangement can be described with the following matrix, $\alpha$-\ce{Al_2O_3}(0001)-$\begin{pmatrix} \sqrt{3} & 0\\ 0 & \sqrt{3} \end{pmatrix}$-R\ang{30}.
 
-\begin{minipage}{0.55\linewidth}
+\begin{figure}
     \centering
-    \includegraphics[width=\linewidth]{/home/david/Documents/PhD/Figures/introduction/Epitaxy.pdf}
-    \captionof{figure}{
-    Pt[111]||Al$_2$O$_3$[0001] epitaxy relationship.
+    \includegraphics[width=0.7\textwidth]{/home/david/Documents/PhD/Figures/introduction/Epitaxy.pdf}
+    \caption{
+        Epitaxy relationship between \{$111$\} Pt planes and [0001]-oriented sapphire substrate.
     }
     \label{fig:Epitaxy}
-\end{minipage}%
-\hfill% Add horizontal space between minipages
-\begin{minipage}{0.44\linewidth}
-    \begin{equation}
-        \epsilon = \big( a_{Pt} \frac{\sqrt{3}}{\sqrt{2}} - a_{Sapphire} \big) / a_{Sapphire}
-        \label{eq:MisfitStrain}
-    \end{equation}
-\end{minipage}%
+\end{figure}%
 
 Lattice strain in diffraction is usually defined as the difference between the reference and experimental lattice parameter values, respectively $a_{ref}$ and $a$ (eq. \ref{eq:StrainDiffraction}).
 
@@ -91,16 +82,19 @@ Lattice strain in diffraction is usually defined as the difference between the r
     \label{eq:StrainDiffraction}
 \end{equation}
 
-In this case, the misfit strain at the platinum-alumina interface can be computed using eq. \ref{eq:MisfitStrain}, the reference lattice parameter is equalled to the in-plane lattice parameter of sapphire, while the lattice parameter of the larger hexagonal arrangement of the platinum atoms on the (111) surface is equal to $\sqrt{3} a_{Pt} / \sqrt{2} $.
-At room temperature, the misfit strain computed from literature values ($a_{Pt} = \qty{3.9242}{\angstrom}$, $a_{Sapphire} = \qty{4.7602}{\angstrom}$) is computed to be equal to $\epsilon = \qty{0.96}{\percent}$.
+In this case, when computing the misfit strain, \textit{i.e.} the strain induced in the Pt nanoparticles by the substrate due to slightly different hexagonal lattices, the reference lattice parameter is equalled to the in-plane lattice parameter of sapphire, $a_{Sapphire} = \qty{4.76}{\angstrom}$.
+The lattice parameter of the larger hexagonal arrangement of the platinum atoms on the (111) surface is equal to $\sqrt{3} a_{Pt} / \sqrt{2}$.
+At room temperature, the misfit strain computed from literature values, $a_{Pt} = \qty{3.92}{\angstrom}$ \parencite{Waseda1975} is equal to $\epsilon = \qty{0.86}{\percent}$.
+To fit on the (0001) sapphire surface, the platinum atoms at the interface are expected to suffer compressive in-plane strain.
 
-\subsection{Catalysis reactor calibration for near-ambient pressure \textit{operando} studies}
+\subsection{Catalysis reactor for near-ambient pressure \textit{operando} studies}
 
 The catalytic activity of the platinum nanoparticles was first studied as a function of the temperature to (i) be certain that the sample is sufficiently catalytically active for the reaction products to be detected by the mass spectrometer, (ii) identify the catalyst light-off temperature and (iii) observe an evolution of the product selectivity as a function of the temperature.
-Similar scans where also performed on the empty reactor/sample holder to ensure the absence of activity towards the oxidation of ammonia.
+Similar scans where also performed on the empty reactor/sample holder to ensure the absence of activity towards the ammonia oxidation.
 
-The heater temperature was calibrated by measuring the temperature in the reactor at different pressures by the means of a type K thermocouple, as a function of the current intensity (fig. \ref{fig:TempRamps} - a), \qty{10}{\minute} separate consecutive datapoints to ensure the heater stability.
-The experimental data points were fit to set the reactor to any temperature from \qtyrange{25}{600}{\degreeCelsius} when working under vacuum or at ambient pressure (\qty{0.3}{\bar} or \qty{0.3}{\bar} of \ce{Ar}).
+The heater was calibrated by measuring the sample temperature at different pressures, with a type K thermocouple, as a function of the current intensity (fig. \ref{fig:TempRamps} - a).
+\qty{10}{\minute} separate consecutive datapoints to ensure the heater stability.
+% The experimental data points were fit to set the reactor to any temperature from \qtyrange{25}{600}{\degreeCelsius} when working under vacuum, or at ambient pressure (\qty{0.3}{\bar} or \qty{0.5}{\bar} of \ce{Ar}).
 The thermal conductivity of the gases involved in the oxidation of ammonia are in the similar order of magnitude (tab. \ref{tab:ThermalConductivity}).
 Moreover, the same inert gas used to set the reactor pressure - Argon - is used as a carrier gas during the experiments, constituting at least \qty{80}{\percent} of the gas flow, and allowing us to assume that the temperature in the reaction chamber is well approximated.
 
@@ -108,7 +102,7 @@ Moreover, the same inert gas used to set the reactor pressure - Argon - is used 
 \centering
     \begin{tabular}{@{}llllllll@{}}
     \toprule
-     & \ce{Ar} & \ce{NH_3} & \ce{O_2} & \ce{NO} & \ce{N_2O} & \ce{N_2}& \ce{H_2O} \\
+                       & \ce{Ar}    & \ce{NH_3}  & \ce{O_2}   & \ce{NO}    & \ce{N_2O}  & \ce{N_2}   & \ce{H_2O} \\
     \midrule
     \qty{300}{\kelvin} & \num{17.7} & \num{25.1} & \num{26.5} & \num{25.9} & \num{17.4} & \num{26.0} & \num{18.6} \\
     \qty{400}{\kelvin} & \num{22.4} & \num{37.2} & \num{34.0} & \num{33.1} & \num{26.0} & \num{32.8} & \num{26.1} \\
@@ -120,7 +114,8 @@ Moreover, the same inert gas used to set the reactor pressure - Argon - is used 
 \label{tab:ThermalConductivity}
 \end{table}
 
-A temperature ramp at a reactor pressure of \qty{0.3}{\bar} (fig. \ref{fig:TempRamps} - b) was carried out to probe the evolution of the reaction products as a function of the temperature under reacting conditions, \textit{i.e.} a constant gas flow of \qty{41}{\ml\per\min} of \ce{Ar}, \qty{8}{\ml\per\min} of \ce{O_2}, and \qty{1}{\ml\per\min} of \ce{NH_3}.
+A temperature ramp at a reactor pressure of \qty{0.3}{\bar} (fig. \ref{fig:TempRamps} - b) was carried out to probe the evolution of the reaction products as a function of the temperature under reacting conditions.
+A constant gas flow is used that consists of \qty{41}{\ml\per\min} of \ce{Ar}, \qty{8}{\ml\per\min} of \ce{O_2}, and \qty{1}{\ml\per\min} of \ce{NH_3}.
 In the frame of this thesis, the same ratio between incoming gas flows in assumed to be respected between the different gas partial pressures, in this case the partial pressure of oxygen is then equal to \qty{80}{\milli\bar}, the partial pressure of ammonia to \qty{10}{\milli\bar}, and the partial pressure of argon to \qty{410}{\milli\bar}.
 
 \begin{figure}[!htb]
@@ -128,41 +123,48 @@ In the frame of this thesis, the same ratio between incoming gas flows in assume
     \includegraphics[width=0.495\textwidth]{/home/david/Documents/PhDScripts/SixS_2022_01_SXRD_Pt100/gas_analysis/figures/ThermocoupleCalibration.pdf}
     \includegraphics[width=0.495\textwidth]{/home/david/Documents/PhDScripts/Test_Reactor_CO2_2021_01/Figures/TempRamp2.pdf}
     \caption{
-        a) Temperature inside the reactor cell measured with a type C thermocouple under vacuum and different \ce{Ar} pressures.
-        b) Partial pressures evolution under a constant gas flow (\qty{41}{\ml\per\min} of \ce{Ar}, \qty{8}{\ml\per\min} of \ce{O_2}, \qty{1}{\ml\per\min} of \ce{NH_3}) at a reactor pressure of \qty{0.3}{\bar} during increasing and decreasing (low transparency) temperature ramp to \qty{650}{\degreeCelsius} with 100 steps, each lasting \qty{10}{\second}.
+        a) Sample temperature measured with a type K thermocouple under vacuum and different \ce{Ar} pressures.
+        b) Evolution of the partial pressures in the RGA chamber under a constant gas flow (\qty{41}{\ml\per\min} of \ce{Ar}, \qty{8}{\ml\per\min} of \ce{O_2}, \qty{1}{\ml\per\min} of \ce{NH_3}).
+        Reactor pressure of \qty{0.3}{\bar}, and increasing and decreasing (low transparency) temperature ramp to \qty{650}{\degreeCelsius}.
+        The ramp is performed with 100 steps, each lasting \qty{10}{\second}.
         The partial pressure of oxygen is omitted for simplicity.
     }
     \label{fig:TempRamps}
 \end{figure}
 
-The catalyst light off temperatures for the production of \ce{N_2}, \ce{NO} and \ce{N_2O} can respectively be identified to be around \qty{300}{\degreeCelsius}, \qty{450}{\degreeCelsius}, and \qty{550}{\degreeCelsius}.
-The excess of oxygen compared to ammonia increases the production of \ce{NO} at high temperatures, with a partial pressure similar to the partial pressure of nitrogen at \qty{650}{\degreeCelsius}.
-No decrease of the nitrogen partial pressure can yet be detected as a function of the increasing temperature.
+The catalyst light off temperatures for the production of \ce{N_2}, \ce{NO} and \ce{N_2O} are \qty{300}{\degreeCelsius}, \qty{450}{\degreeCelsius}, and \qty{550}{\degreeCelsius} (fig. \ref{fig:TempRamps}).
+The production of \ce{NO} increases at high temperatures, with a partial pressure similar to the partial pressure of nitrogen at \qty{650}{\degreeCelsius}.
+An exponential decrease as a function of increasing temperature in reported in literature for the production of \ce{N_2}, with industrial catalysts, and at industrial conditions \parencite{Hatscher2008}.
+This decrease starts at \qty{200}{\degreeCelsius}, only a few percent of \ce{N_2} are produced at \qty{900}{\degreeCelsius}.
+This behaviour is not observed during the temperature ramps in fig. \ref{fig:TempRamps}.
 The production of nitrous oxide stays at low values during the temperature ramp, almost imperceptible from the background pressure.
 
-According to these primary results, the study of the oxidation of ammonia was originally decided to be carried out at \qtylist{300;500;600}{\degreeCelsius}, temperatures before and after the catalyst light off (tab. \ref{tab:ConditionsNanoparticles}).
+According to these primary results, the study of the oxidation of ammonia was first carried out at \qty{300}{\degreeCelsius}, a temperature before the catalyst light off.
+The measurements were then performed at \qtylist{500; 600}{\degreeCelsius} to measure the importance of the temperature after catalyst light off on the reaction selectivity.
+To probe the importance of the \ce{O_2}/\ce{NH_3} ratio on the reaction selectivity, and its link with the catalyst structure, ammonia is first introduced in the reactor, followed by a step by step increase of the oxygen pressure.
+The different gas conditions used at each temperature are resumed in tab. \ref{tab:ConditionsNanoparticles}.
 
 \begin{table}[!htb]
 \centering
 \resizebox{\textwidth}{!}{%
-    \begin{tabular}{@{}lll|l|lll|l@{}}
+    \begin{tabular}{@{}l|lll|l|lll|l@{}}
     \toprule
-    \multicolumn{3}{l|}{Gas Flow (\unit{\ml\per\min})} & Total pressure (\unit{\milli\bar}) & \multicolumn{3}{l|}{Partial pressures (\unit{\milli\bar})} & Targeted information \\
+    Order & \multicolumn{3}{l|}{Gas Flow (\unit{\ml\per\min})} & Total pressure (\unit{\milli\bar}) & \multicolumn{3}{l|}{Partial pressures (\unit{\milli\bar})} & Targeted information \\
     \midrule
     \midrule
-    \ce{Ar} & \ce{O_2} & \ce{NH_3} &  & \ce{Ar} & \ce{O_2} & \ce{NH_3} &  \\
+     & \ce{Ar} & \ce{O_2} & \ce{NH_3} &  & \ce{Ar} & \ce{O_2} & \ce{NH_3} &  \\
     \midrule
     \midrule
-    50 & 0 & 0 & 300 & 300 & 0 & 0 & Catalyst state without reactants (unactive) \\
-    49 & 0 & 1 & 300 & 294 & 0 & 6 & Ammonia adsorption \\
-    48.5 & 0.5 & 1 & 300 & 291 & 3 & 6 &  \multirow{4}{*}{\begin{tabular}[c]{@{}l@{}}Influence of (\ce{NH_3}/\ce{O_2}) ratio on the \\ catalyst selectivity and structure \end{tabular}}\\
-    48 & 1 & 1 & 300 & 288 & 6 & 6 &  \\
-    47 & 2 & 1 & 300 & 282 & 12 & 6 &  \\
-    41 & 8 & 1 & 300 & 276 & 18 & 6 & \\
-    50 & 0 & 0 & 300 & 300 & 0 & 0 & Returning to pristine state \\
+    1 & 50 & 0 & 0 & 300 & 300 & 0 & 0 & Catalyst state without reactants (unactive) \\
+    2 & 49 & 0 & 1 & 300 & 294 & 0 & 6 & Ammonia adsorption \\
+    3 & 48.5 & 0.5 & 1 & 300 & 291 & 3 & 6 &  \multirow{4}{*}{\begin{tabular}[c]{@{}l@{}}Influence of (\ce{NH_3}/\ce{O_2}) ratio on the \\ catalyst selectivity and structure \end{tabular}}\\
+    4 & 48 & 1 & 1 & 300 & 288 & 6 & 6 &  \\
+    5 & 47 & 2 & 1 & 300 & 282 & 12 & 6 &  \\
+    6 & 41 & 8 & 1 & 300 & 276 & 18 & 6 & \\
+    7 & 50 & 0 & 0 & 300 & 300 & 0 & 0 & Returning to pristine state \\
     \bottomrule
     \end{tabular}%
 }
-\caption{Different atmospheres used to probe the ammonia oxidation on Pt nanoparticles with BCDI.}
+\caption{Different atmospheres used to probe the ammonia oxidation on Pt nanoparticles.}
 \label{tab:ConditionsNanoparticles}
 \end{table}
